#820 - better translation names for letter R to Z, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1092,35 +1092,35 @@ remove_previews_action.remove=Entfernen
 remove_previews_action.text=Alle Folder von der Vorschau entfernen?
 remove_previews_action.title=Alle entfernen
 
-removefriend.description=Entfernt den gew\u00e4hlten Benutzer aus Ihrer Freundesliste
-removefriend.key=r
-removefriend.name=Freund entfernen
+remove_friend.description=Entfernt den gew\u00e4hlten Benutzer aus Ihrer Freundesliste
+remove_friend.key=r
+remove_friend.name=Freund entfernen
 
-removemodifierfriend.description=Entfernt den Bearbeiter der Datei aus Ihrer Freundesliste
-removemodifierfriend.key=r
-removemodifierfriend.name=Freund entfernen
+remove_modifier_friend.description=Entfernt den Bearbeiter der Datei aus Ihrer Freundesliste
+remove_modifier_friend.key=r
+remove_modifier_friend.name=Freund entfernen
 
-requestfilelist.description=Erneuert die Dateiliste des Folders
-requestfilelist.key=f
-requestfilelist.name=Neue Dateiliste anfordern
+request_file_list.description=Erneuert die Dateiliste des Folders
+request_file_list.key=f
+request_file_list.name=Neue Dateiliste anfordern
 
 restore.busy.description=Stellt Dateien vom Papierkorb wieder her
 restore.busy.title=Datei(en) wiederherstellen
 
-restorefile.description=Stellt Dateien wieder her
-restorefile.key=W
-restorefile.name=Datei wiederherstellen
+restore_file.description=Stellt Dateien wieder her
+restore_file.key=W
+restore_file.name=Datei wiederherstellen
 
-rootpanel.connected_users=Verbunden Benutzer
-rootpanel.friends=Freunde
+root_panel.connected_users=Verbunden Benutzer
+root_panel.friends=Freunde
 
-scanallfolders.description=Synchronisiert jetzt alle PowerFolder (F5)
-scanallfolders.key=a
-scanallfolders.name=Sync jetzt
+scan_all_folders.description=Synchronisiert jetzt alle PowerFolder (F5)
+scan_all_folders.key=a
+scan_all_folders.name=Sync jetzt
 
-scanfolder.description=Synchronisiert diesen PowerFolder (Alt-1)
-scanfolder.key=s
-scanfolder.name=Synchronisieren
+scan_folder.description=Synchronisiert diesen PowerFolder (Alt-1)
+scan_folder.key=s
+scan_folder.name=Synchronisieren
 
 select_invitation.folder_text=PowerFolder für die Einladung auswählen
 select_invitation.message_text=Nachricht an den Empfänger
@@ -1132,27 +1132,27 @@ send_invitation.multi_users=Mehrere ausgew\u00e4hlt
 send_invitation.no_users=Keine Auswahl
 send_invitation.select_user.text=Auswählen
 
-##sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
-##sendinvitation.allFolders.title={0} already on all folders
-sendinvitation.ask_emailaddres.message=Email Adresse f\u00fcr die Einladung
-sendinvitation.ask_emailaddres.title=Email Adresse
-sendinvitation.body=Hallo {0},<br><br>{1} l\u00e4d Sie zum PowerFolder '{2}' ein.<br>Mit dieser Einladung bekommen Sie Zugriff auf die Dateien des Folders.<br><br>Anleitung\:<br>1) Laden Sie das freie Synchronisationstool <b>PowerFolder</b> von <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Nach der Installation von <b>PowerFolder</b> l\u00e4sst sich die angeh\u00e4ngte Einladungsdatei per Doppelclick \u00f6ffnen.<br><br>Mehr Information\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Gr\u00fcsse,<br>{1}
-sendinvitation.description=L\u00e4dt einen Benutzer ein, einem Folder beizutreten
-sendinvitation.email=Per Email...
-sendinvitation.folder.text=Einladung senden an
-sendinvitation.folder.title=Einladung senden
-sendinvitation.key=i
-sendinvitation.name=Einladung versenden
-sendinvitation.placetostore=W\u00e4hlen Sie den Ort, an dem Sie die Einladung speichern m\u00f6chten\:
-sendinvitation.subject=Einladung zum PowerFolder '{0}'
-sendinvitation.toclipboard=In die Zwischenablage...
-sendinvitation.todisk=Abspeichern unter...
+##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
+##send_invitation.allFolders.title={0} already on all folders
+send_invitation.ask_emailaddres.message=Email Adresse f\u00fcr die Einladung
+send_invitation.ask_emailaddres.title=Email Adresse
+send_invitation.body=Hallo {0},<br><br>{1} l\u00e4d Sie zum PowerFolder '{2}' ein.<br>Mit dieser Einladung bekommen Sie Zugriff auf die Dateien des Folders.<br><br>Anleitung\:<br>1) Laden Sie das freie Synchronisationstool <b>PowerFolder</b> von <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Nach der Installation von <b>PowerFolder</b> l\u00e4sst sich die angeh\u00e4ngte Einladungsdatei per Doppelclick \u00f6ffnen.<br><br>Mehr Information\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Gr\u00fcsse,<br>{1}
+send_invitation.description=L\u00e4dt einen Benutzer ein, einem Folder beizutreten
+send_invitation.email=Per Email...
+send_invitation.folder.text=Einladung senden an
+send_invitation.folder.title=Einladung senden
+send_invitation.key=i
+send_invitation.name=Einladung versenden
+send_invitation.placetostore=W\u00e4hlen Sie den Ort, an dem Sie die Einladung speichern m\u00f6chten\:
+send_invitation.subject=Einladung zum PowerFolder '{0}'
+send_invitation.toclipboard=In die Zwischenablage...
+send_invitation.todisk=Abspeichern unter...
 
-setmasternode.description=W\u00e4hlt den Administrator f\u00fcr Ihre Freundesliste. Die Freundesliste wird vom Administrator heruntergeladen.
-setmasternode.dialog.text=W\u00e4hlt den Administrator f\u00fcr Ihre Freundesliste
-setmasternode.dialog.title=Administrator Freundesliste
-setmasternode.key=a
-setmasternode.name=Administrator w\u00e4hlen
+set_master_node.description=W\u00e4hlt den Administrator f\u00fcr Ihre Freundesliste. Die Freundesliste wird vom Administrator heruntergeladen.
+set_master_node.dialog.text=W\u00e4hlt den Administrator f\u00fcr Ihre Freundesliste
+set_master_node.dialog.title=Administrator Freundesliste
+set_master_node.key=a
+set_master_node.name=Administrator w\u00e4hlen
 
 setup.description=Erstellt ein neuen oder tritt existierendem PowerFolder bei
 setup.key=s
@@ -1162,32 +1162,32 @@ show_preview.description=Vorschau-Folder werden in der Liste angezeigt
 show_preview.key=V
 show_preview.name=Zeige Vorschau-Folder
 
-showfileinfo.description=Zeigt detaillierte Informationen \u00fcber die ausgew\u00e4hlte Datei an
-showfileinfo.key=p
-showfileinfo.name=Eigenschaften der Datei
+show_file_info.description=Zeigt detaillierte Informationen \u00fcber die ausgew\u00e4hlte Datei an
+show_file_info.key=p
+show_file_info.name=Eigenschaften der Datei
 
-##showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
-showhidefiledetails.key=d
-showhidefiledetails.name=Details
+##show_hide_file_details.description=Shows/Hides detailed information about the selected file (Alt-4)
+show_hide_file_details.key=d
+show_hide_file_details.name=Details
 
 splash.version=Version {0}
 
 start.file.unable.text=Kann nicht ausgef\u00fchrt werden\n{0}
 start.file.unable.title=Kann nicht ausgef\u00fchrt werden
 
-startdownloads.description=\u00d6ffnet die ausgew\u00e4hlte und fertig heruntergeladenen Dateien
-startdownloads.key=s
-startdownloads.name=\u00d6ffnen
+start_downloads.description=\u00d6ffnet die ausgew\u00e4hlte und fertig heruntergeladenen Dateien
+start_downloads.key=s
+start_downloads.name=\u00d6ffnen
 
 status.download=Down\: %.2f KB/s
 status.port=Port\: {0}
 status.upload=Up\: %.2f KB/s
 
-statusbar.status_change.connected=PowerFolder ist verbunden
-statusbar.status_change.disabled=PowerFolder ist abgeschaltet
-statusbar.status_change.disconnected=PowerFolder ist nicht verbunden
-statusbar.status_change.title=Verbindungsstatus
-statusbar.synchronizing=Synchronisiere...
+status_bar.status_change.connected=PowerFolder ist verbunden
+status_bar.status_change.disabled=PowerFolder ist abgeschaltet
+status_bar.status_change.disconnected=PowerFolder ist nicht verbunden
+status_bar.status_change.title=Verbindungsstatus
+status_bar.synchronizing=Synchronisiere...
 
 ##sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview.
 ##sync_folder_rights.key=S
@@ -1199,31 +1199,31 @@ synchronisation.warning.automatic_deletions_notice=Dieser Modus synchronisiert a
 synchronisation.warning.explanation=Sie haben den Transfer Modus '{0}' f\u00fcr Folder {1} eingestellt.
 synchronisation.warning.title=Transfer Modus {0} f\u00fcr {1} eingestellt
 
-syncprofile.autodownload_friends.name=Automatischer Download (Freunde)
-syncprofile.automatic_download.name=Automatischer Download
-syncprofile.automatic_synchronization.name=Automatische Synchronisation
-syncprofile.backup_source.name=Backup (Quelle)
-syncprofile.backup_target.name=Backup (Ziel)
-syncprofile.custom.name=Eigene...
-syncprofile.disabled.name=Disabled
-syncprofile.host_files.name=Freigeben/Versenden
-syncprofile.manual_synchronization.name=Manuelle Synchronisation
-syncprofile.no_sync.name=Keine Synchronisation
+transfer_mode.auto_download_friends.name=Automatischer Download (Freunde)
+transfer_mode.automatic_download.name=Automatischer Download
+transfer_mode.automatic_synchronization.name=Automatische Synchronisation
+transfer_mode.backup_source.name=Backup (Quelle)
+transfer_mode.backup_target.name=Backup (Ziel)
+transfer_mode.custom.name=Eigene...
+transfer_mode.disabled.name=Disabled
+transfer_mode.host_files.name=Freigeben/Versenden
+transfer_mode.manual_synchronization.name=Manuelle Synchronisation
+transfer_mode.no_sync.name=Keine Synchronisation
 
-systemservice.options.info1=Mit diese Option installieren/deinstallieren
-systemservice.options.info2=Sie PowerFolder als Systemdienst.
-systemservice.options.install=Installieren
-systemservice.options.title=PowerFolder System Dienst
-systemservice.options.uninstall=Deinstallieren
+system_service.options.info1=Mit diese Option installieren/deinstallieren
+system_service.options.info2=Sie PowerFolder als Systemdienst.
+system_service.options.install=Installieren
+system_service.options.title=PowerFolder System Dienst
+system_service.options.uninstall=Deinstallieren
 
 systray.exit=Beenden
 systray.hide=Verstecken
 systray.powerfolder=PowerFolder v{0}
 systray.show=Anzeigen
-systray.syncall=Jetzt Synchronisieren
+systray.sync_all=Jetzt Synchronisieren
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.down.mb=Down {0} MBs
-systray.tooltip.insync=Synchronisiert
+systray.tooltip.in_sync=Synchronisiert
 systray.tooltip.syncing=Synchronisiere...
 systray.tooltip.up=Up {0} KBs
 systray.tooltip.up.mb=Up {0} MBs
@@ -1262,7 +1262,7 @@ transfers.local=lokal
 transfers.pending=Ausstehend
 transfers.progress=Fortschritt
 transfers.queued=Warte
-transfers.remotehashing=Vorbereiten
+transfers.remote_hashing=Vorbereiten
 transfers.requested=Angefordert
 transfers.searching=Suche...
 transfers.to=Zu
@@ -1302,21 +1302,21 @@ user.dir.videos=Videos
 winutils.shortcut.description=Diese Verkn\u00fcpfung wurde von PowerFolder erstellt.
 
 wizard.backup_panel.folder_backup_success=Sie haben die automatische Sicherung\nerfolgreich eingerichtet\!
-wizard.backup_panel.pcsjoin=Andere Computer k\u00f6nnen nun dem Folder beitreten
+wizard.backup_panel.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
 wizard.backup_panel.select=Bitte w\u00e4hlen Sie das Verzeichnis, da\u00df gesichert werden soll.
-wizard.basicsetup.computer_name=Name dieses Computers
-wizard.basicsetup.default_folder_name=Synchronisierte Dateien
-wizard.basicsetup.lanonly=Nur LAN
-wizard.basicsetup.networking=Verbindungen
-wizard.basicsetup.private=LAN und Internet
-wizard.basicsetup.title=Basis Setup
-wizard.basicsetup.upload.text=Unbegrenzte Bandbreite kann zu einer hohe Auslastung der Internet Verbindung f\u00fchren.
-wizard.basicsetup.upload.title=Unbegrenzte Bandbreite
+wizard.basic_setup.computer_name=Name dieses Computers
+wizard.basic_setup.default_folder_name=Synchronisierte Dateien
+wizard.basic_setup.lan_only=Nur LAN
+wizard.basic_setup.networking=Verbindungen
+wizard.basic_setup.private=LAN und Internet
+wizard.basic_setup.title=Basis Setup
+wizard.basic_setup.upload.text=Unbegrenzte Bandbreite kann zu einer hohe Auslastung der Internet Verbindung f\u00fchren.
+wizard.basic_setup.upload.title=Unbegrenzte Bandbreite
 wizard.choose_location.select=Verzeichnis ausw\u00e4hlen
-wizard.choosedisklocation.calculating_directory_size=Berechne Größe des Verzeichnis...
-wizard.choosedisklocation.directory_size=Verzeichnis Größe {0}
-wizard.choosedisklocation.select=Verzeichnisauswahl
-wizard.choosedisklocation.title=Festplatten Speicherort
+wizard.choose_disk_location.calculating_directory_size=Berechne Größe des Verzeichnis...
+wizard.choose_disk_location.directory_size=Verzeichnis Größe {0}
+wizard.choose_disk_location.select=Verzeichnisauswahl
+wizard.choose_disk_location.title=Festplatten Speicherort
 wizard.control.back=< Zur\u00fcck
 wizard.control.back.description=Zum vorherigen Schritt
 wizard.control.cancel=Abbrechen
@@ -1330,25 +1330,25 @@ wizard.control.next.description=Zum nächsten Schritt
 wizard.create_folder.failed=Kann PowerFolder nicht erstellen.
 wizard.create_folder.title=Erstelle PowerFolder
 wizard.create_folder.working=Erstelle PowerFolder, bitte warten.
-wizard.filesharing.sharedsuccess=Ein neuer Folder wurde erstellt\!\nSie k\u00f6nnen nun anderen Benutzern Zugriff geben.
+wizard.file_sharing.shared_success=Ein neuer Folder wurde erstellt\!\nSie k\u00f6nnen nun anderen Benutzern Zugriff geben.
 wizard.folder_invitation.intro=Sie haben eine Einladung von {0} erhalten
 wizard.folder_invitation.title=Folder Einladung
 wizard.host_panel.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\!\n
-wizard.host_panel.pcsjoin=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
+wizard.host_panel.pcs_join=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
 wizard.host_panel.select=Welches Verzeichnis soll freigegeben werden?
-wizard.invite.selectlocaldirectory=W\u00e4hlen Sie das lokale Verzeichnis aus
-wizard.load_invitation.addtofriends={0} der Freundesliste hizuf\u00fcgen
-wizard.load_invitation.choosefile=Einladungs-Datei \u00f6ffnen
+wizard.invite.select_local_directory=W\u00e4hlen Sie das lokale Verzeichnis aus
+wizard.load_invitation.add_to_friends={0} der Freundesliste hizuf\u00fcgen
+wizard.load_invitation.choose_file=Einladungs-Datei \u00f6ffnen
 wizard.load_invitation.select=Einladung-Datei ausw\u00e4hlen
-wizard.load_invitation.selectfile=Einladungs-Datei auswählen
+wizard.load_invitation.select_file=Einladungs-Datei auswählen
 wizard.load_invitation.title=Einladung \u00f6ffnen
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
 wizard.pfwizard.title=Assistent
 wizard.project_panel.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
 wizard.project_panel.select=Bitte w\u00e4hlen Sie das Verzeichnis mit den Projektdateien aus
-wizard.projectname.choose=Projektname w\u00e4hlen
-wizard.projectname.entername=Bitte geben Sie einen Namen f\u00fcr Ihr Projekt an
-wizard.projectname.title=Einladung \u00f6ffnen
+wizard.project_name.choose=Projektname w\u00e4hlen
+wizard.project_name.enter_name=Bitte geben Sie einen Namen f\u00fcr Ihr Projekt an
+wizard.project_name.title=Einladung \u00f6ffnen
 wizard.send_invitations.invitation_text=Ihre Nachricht an den Empf\u00e4nger
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=Einladungen sind notwendig um PowerFolder beizutreten.
@@ -1358,36 +1358,36 @@ wizard.send_invitations.save_to_file=Als Datei speichern
 wizard.send_invitations.send_by_mail=Per Mail versenden
 wizard.send_invitations.send_invitation=Einladung versenden
 wizard.send_invitations.title=Einladung speichern
-wizard.sendinvitations.offline=Nicht verbunden
-wizard.sendinvitations.sendsuccess=Einladung versendet
-wizard.sendinvitations.sendsuccessinfo=Die Einladung wurde erfolgreich versendet.
-wizard.setup_folder.sendinvitation=Anschlie\u00dfend Einladungen versenden
+wizard.send_invitations.offline=Nicht verbunden
+wizard.send_invitations.send_success=Einladung versendet
+wizard.send_invitations.send_success_info=Die Einladung wurde erfolgreich versendet.
+wizard.setup_folder.send_invitation=Anschlie\u00dfend Einladungen versenden
 wizard.setup_folder.title=Erweitertes Setup
 wizard.setup_folder.transfer_mode=Transfer Modus
-wizard.setupdns.dyndnshomepage=Dyndns Homepage
-wizard.setupdns.enterdns=Bitte geben Sie Ihre (dynamische) Internetadresse an
-wizard.setupdns.improvesread=<html>Eine (dynamische) Internetadresse (Dynamic DNS) verbessert Ihre<br>Erreichbarkeit. Unbedingt ben\u00f6tigt wird sie aber nicht.</html>
-wizard.setupdns.nodnssetup=<html>Sie haben bis jetzt noch keine (dynamische) Internetadresse<br>(Dynamic DNS) angegeben\!</html>
-wizard.setupdns.title=Dynamische Internetadresse einstellen
-wizard.setupdns.validate=\u00dcberpr\u00fcfen
-wizard.setupsuccess=Setup erfolgreich
-wizard.successjoin=Der Folder wurde auf diesem Computer eingerichtet\!
+wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
+wizard.setup_dns.enter_dns=Bitte geben Sie Ihre (dynamische) Internetadresse an
+wizard.setup_dns.improves_read=<html>Eine (dynamische) Internetadresse (Dynamic DNS) verbessert Ihre<br>Erreichbarkeit. Unbedingt ben\u00f6tigt wird sie aber nicht.</html>
+wizard.setup_dns.no_dns_setup=<html>Sie haben bis jetzt noch keine (dynamische) Internetadresse<br>(Dynamic DNS) angegeben\!</html>
+wizard.setup_dns.title=Dynamische Internetadresse einstellen
+wizard.setup_dns.validate=\u00dcberpr\u00fcfen
+wizard.setup_success=Setup erfolgreich
+wizard.success_join=Der Folder wurde auf diesem Computer eingerichtet\!
 wizard.sync_pcs_panel.select=Bitte wählen Sie das Verzeichnis, welches synchronisiert werden soll
-wizard.syncpcspanel.foldersyncsuccess=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
-wizard.syncpcspanel.pcsjoin=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
-wizard.webservice.enteraccount=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
-wizard.webservice.learnmore=Was ist der PowerFolder Online Speicher?
+wizard.sync_pcs_panel.folder_sync_success=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
+wizard.sync_pcs_panel.pcs_join=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
+wizard.webservice.enter_account=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
+wizard.webservice.learn_more=Was ist der PowerFolder Online Speicher?
 wizard.webservice.login=Online Speicher Login
-wizard.webservice.mirrorchoosefolder=Bitte w\u00e4hlen Sie den Folder aus der auf den Online Speicher gesichert werden soll
-wizard.webservice.mirrorsetup=Folder auf Online Speicher sichern
+wizard.webservice.mirror_choose_folder=Bitte w\u00e4hlen Sie den Folder aus der auf den Online Speicher gesichert werden soll
+wizard.webservice.mirror_setup=Folder auf Online Speicher sichern
 wizard.webservice.password=Passwort
 wizard.webservice.register=Neu registrieren
 wizard.webservice.username=Email
-wizard.whattodo.backup_folder=Verzeichnis sichern
-wizard.whattodo.custom_sync=Erweitertes Setup
-wizard.whattodo.hostwork=Verzeichnis freigeben/versenden
-wizard.whattodo.load_invite=Einladungs-Datei \u00f6ffnen
-wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
-wizard.whattodo.projectwork=Neues Projekt aufsetzen
-wizard.whattodo.synchronized_folder=Computer synchronisieren
-wizard.whattodo.title=Was m\u00f6chten Sie tun?
+wizard.what_to_do.backup_folder=Verzeichnis sichern
+wizard.what_to_do.custom_sync=Erweitertes Setup
+wizard.what_to_do.host_work=Verzeichnis freigeben/versenden
+wizard.what_to_do.load_invite=Einladungs-Datei \u00f6ffnen
+wizard.what_to_do.open_online_documentation=Online Dokumentation \u00f6ffnen
+wizard.what_to_do.project_work=Neues Projekt aufsetzen
+wizard.what_to_do.synchronized_folder=Computer synchronisieren
+wizard.what_to_do.title=Was m\u00f6chten Sie tun?
