--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1027,17 +1027,17 @@ remove_previews_action.remove=Rimuovi
 remove_previews_action.text=Vuoi rimuovere tutte le cartelle di anteprima?
 remove_previews_action.title=Rimuovi tutte le cartelle di anteprima
 
-removefriend.description=Togli utente dalla lista
-removefriend.key=T
-removefriend.name=Togli utente dalla lista
+remove_friend.description=Togli utente dalla lista
+remove_friend.key=T
+remove_friend.name=Togli utente dalla lista
 
-removemodifierfriend.description=Removes the file modifier from friendlist
-removemodifierfriend.key=r
-removemodifierfriend.name=Remove Modifier from Friends
+remove_modifier_friend.description=Removes the file modifier from friendlist
+remove_modifier_friend.key=r
+remove_modifier_friend.name=Remove Modifier from Friends
 
-requestfilelist.description=Aggiorna la lista dei file di questa cartella dall'utente remoto
-requestfilelist.key=f
-requestfilelist.name=Richiedi una nuova lista dei file
+request_file_list.description=Aggiorna la lista dei file di questa cartella dall'utente remoto
+request_file_list.key=f
+request_file_list.name=Richiedi una nuova lista dei file
 
 requestnetfolderlist.description=Aggiorna la lista delle cartelle pubbliche
 requestnetfolderlist.key=A
@@ -1046,20 +1046,20 @@ requestnetfolderlist.name=Aggiorna la lista
 restore.busy.description=Spostamento files dal cestino di PowerFolder alla tua cartella
 restore.busy.title=Recupero file(s)
 
-restorefile.description=Ripristina file
-restorefile.key=R
-restorefile.name=Ripristina file
+restore_file.description=Ripristina file
+restore_file.key=R
+restore_file.name=Ripristina file
 
-rootpanel.connected_users=Utenti connessi
-rootpanel.friends=Amici
+root_panel.connected_users=Utenti connessi
+root_panel.friends=Amici
 
-scanallfolders.description=Sincronizza tutte le cartelle ora (F5)
-scanallfolders.key=a
-scanallfolders.name=Sincro Cartelle
+scan_all_folders.description=Sincronizza tutte le cartelle ora (F5)
+scan_all_folders.key=a
+scan_all_folders.name=Sincro Cartelle
 
-scanfolder.description=Controlla le modifiche di file nelle cartelle ora (Alt-1)
-scanfolder.key=s
-scanfolder.name=Sincronizza ora
+scan_folder.description=Controlla le modifiche di file nelle cartelle ora (Alt-1)
+scan_folder.key=s
+scan_folder.name=Sincronizza ora
 
 select_invitation.folder_text=Seleziona la cartella per la quale mandare l'invito
 select_invitation.message_text=Inserisci un messaggio per il destinatario
@@ -1071,27 +1071,27 @@ send_invitation.multi_users=Utenti multipli selezionati
 send_invitation.no_users=Nessun utente selezionato
 send_invitation.select_user.text=Seleziona utente
 
-sendinvitation.allFolders.text=Impossibile invitare {0} in una cartella\nL'utente partecipa gi\u00E0 a tutte le tue cartelle
-sendinvitation.allFolders.title={0} gi\u00E0 su tutte le cartelle
-sendinvitation.ask_emailaddres.message=Indirizzo Email cui mandare un invito
-sendinvitation.ask_emailaddres.title=Indirizzo Email
-sendinvitation.body=Ciao {0},<br><br>{1} ti invita inPowerFolder '{2}'<br>Questo invito viene usato per accedere ad una cartella privata ospitata da{1}.<br><br>1) Per accedere ai file devi prima scaricare e installare il software gratuito<br>PowerFolder da<br>http\://www.powerfolder.com.<br><br>2) Dopo aver installato PowerFolder clicca l' invito<br>allegato a questa email.<br><br>Per ulteriori informazioni o aiuto nell' installazione ed uso di PowerFolder si prega di<br>visitare il nostro Documentation Resources at http\://docs.powerfolder.com<br><br>Grazie,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
-sendinvitation.description=Invita un utente ad utilizzare una cartella
-sendinvitation.email=All' email...
-sendinvitation.folder.text=Invia un invito a
-sendinvitation.folder.title=Invia invito
-sendinvitation.key=I
-sendinvitation.name=Invia un invito
-sendinvitation.placetostore=Scegli un posto dove memorizzare l'invito
-sendinvitation.subject=Invito a PowerFolder '{0}'
-sendinvitation.toclipboard=Sugli appunti...
-sendinvitation.todisk=Su disco...
+send_invitation.allFolders.text=Impossibile invitare {0} in una cartella\nL'utente partecipa gi\u00E0 a tutte le tue cartelle
+send_invitation.allFolders.title={0} gi\u00E0 su tutte le cartelle
+send_invitation.ask_emailaddres.message=Indirizzo Email cui mandare un invito
+send_invitation.ask_emailaddres.title=Indirizzo Email
+send_invitation.body=Ciao {0},<br><br>{1} ti invita inPowerFolder '{2}'<br>Questo invito viene usato per accedere ad una cartella privata ospitata da{1}.<br><br>1) Per accedere ai file devi prima scaricare e installare il software gratuito<br>PowerFolder da<br>http\://www.powerfolder.com.<br><br>2) Dopo aver installato PowerFolder clicca l' invito<br>allegato a questa email.<br><br>Per ulteriori informazioni o aiuto nell' installazione ed uso di PowerFolder si prega di<br>visitare il nostro Documentation Resources at http\://docs.powerfolder.com<br><br>Grazie,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
+send_invitation.description=Invita un utente ad utilizzare una cartella
+send_invitation.email=All' email...
+send_invitation.folder.text=Invia un invito a
+send_invitation.folder.title=Invia invito
+send_invitation.key=I
+send_invitation.name=Invia un invito
+send_invitation.placetostore=Scegli un posto dove memorizzare l'invito
+send_invitation.subject=Invito a PowerFolder '{0}'
+send_invitation.toclipboard=Sugli appunti...
+send_invitation.todisk=Su disco...
 
-setmasternode.description=Scegli l'utente amministratore per la tua lista di amici. La lista \u00E8 caricata dall'amministratore
-setmasternode.dialog.text=Scegli l'amministratore per la lista di amici
-setmasternode.dialog.title=Amministratore della lista degli amici
-setmasternode.key=A
-setmasternode.name=Scegli l'utente Admin
+set_master_node.description=Scegli l'utente amministratore per la tua lista di amici. La lista \u00E8 caricata dall'amministratore
+set_master_node.dialog.text=Scegli l'amministratore per la lista di amici
+set_master_node.dialog.title=Amministratore della lista degli amici
+set_master_node.key=A
+set_master_node.name=Scegli l'utente Admin
 
 setup.description=Imposta nuovi PowerFolders o partecipa quelli gi\u00E0 esistenti
 setup.key=I
@@ -1101,32 +1101,32 @@ show_preview.description=Le cartelle di anteprima saranno visibili nella lista d
 show_preview.key=M
 show_preview.name=Mostra Cartelle di Anteprima 
 
-showfileinfo.description=Mostra informazioni riguardo il file selezionato
-showfileinfo.key=P
-showfileinfo.name=Propriet\u00E0 del file
+show_file_info.description=Mostra informazioni riguardo il file selezionato
+show_file_info.key=P
+show_file_info.name=Propriet\u00E0 del file
 
-showhidefiledetails.description=Mostra/Nasconde informazioni dettagliate sul file selezionato (Alt-4)
-showhidefiledetails.key=d
-showhidefiledetails.name=Dettagli
+show_hide_file_details.description=Mostra/Nasconde informazioni dettagliate sul file selezionato (Alt-4)
+show_hide_file_details.key=d
+show_hide_file_details.name=Dettagli
 
 splash.version=Versione {0}
 
 start.file.unable.text=Impossibile iniziare\n{0}
 start.file.unable.title=Impossibile iniziare
 
-startdownloads.description=Apri il file selezionato
-startdownloads.key=A
-startdownloads.name=Apri
+start_downloads.description=Apri il file selezionato
+start_downloads.key=A
+start_downloads.name=Apri
 
 status.download=Down\: %.2f KB/s
 status.port=Porta\: {0}
 status.upload=Up\: %.2f KB/s
 
-statusbar.status_change.connected=PowerFolder \u00E8 connesso
-statusbar.status_change.disabled=PowerFolder \u00E8 disabilitato 
-statusbar.status_change.disconnected=PowerFolder \u00E8 disconnesso
-statusbar.status_change.title=Stato di connessione
-statusbar.synchronizing=Sincronizzazione in corso...
+status_bar.status_change.connected=PowerFolder \u00E8 connesso
+status_bar.status_change.disabled=PowerFolder \u00E8 disabilitato
+status_bar.status_change.disconnected=PowerFolder \u00E8 disconnesso
+status_bar.status_change.title=Stato di connessione
+status_bar.synchronizing=Sincronizzazione in corso...
 
 sync_folder_rights.description=Sincronizza i membri delle cartelle con i loro accounts. Aggiungi all'anteprima i PowerFolder disponibili.
 sync_folder_rights.key=A
@@ -1138,31 +1138,31 @@ synchronisation.warning.automatic_deletions_notice=Questa modalit\u00E0 sincroni
 synchronisation.warning.explanation=Hai scelto il profilo di sincronizzazione '{0}' per la cartella {1}.
 synchronisation.warning.title=Attiva il profilo di sincronizzazione {0} per {1}
 
-syncprofile.autodownload_friends.name=Amici da cui fare il download automatico
-syncprofile.automatic_download.name=Download automatico
-syncprofile.automatic_synchronization.name=Sincronizzazione automatica
-syncprofile.backup_source.name=Salvataggio (sorgente)
-syncprofile.backup_target.name=Salvataggio (destinazione)
-syncprofile.custom.name=Personalizzato...
-syncprofile.disabled.name=Disabilitato
-syncprofile.host_files.name=Files locali
-syncprofile.manual_synchronization.name=Sincronizzazione manuale
-syncprofile.no_sync.name=Nessuna sincronizzazione
+transfer_mode.auto_download_friends.name=Amici da cui fare il download automatico
+transfer_mode.automatic_download.name=Download automatico
+transfer_mode.automatic_synchronization.name=Sincronizzazione automatica
+transfer_mode.backup_source.name=Salvataggio (sorgente)
+transfer_mode.backup_target.name=Salvataggio (destinazione)
+transfer_mode.custom.name=Personalizzato...
+transfer_mode.disabled.name=Disabilitato
+transfer_mode.host_files.name=Files locali
+transfer_mode.manual_synchronization.name=Sincronizzazione manuale
+transfer_mode.no_sync.name=Nessuna sincronizzazione
 
-systemservice.options.info1=Usa queste opzioni install/uninstall
-systemservice.options.info2=PowerFolder come servizio di sistema.
-systemservice.options.install=Installa
-systemservice.options.title=PowerFolder Servizio di Sistema.
-systemservice.options.uninstall=Disinstalla
+system_service.options.info1=Usa queste opzioni install/uninstall
+system_service.options.info2=PowerFolder come servizio di sistema.
+system_service.options.install=Installa
+system_service.options.title=PowerFolder Servizio di Sistema.
+system_service.options.uninstall=Disinstalla
 
 systray.exit=Esci
 systray.hide=Nascondi
 systray.powerfolder=PowerFolder v{0}
 systray.show=Mostra
-systray.syncall=Sincronizza Cartelle
+systray.sync_all=Sincronizza Cartelle
 systray.tooltip.down=DOWN {0} KBs
 systray.tooltip.down.mb=DOWN {0} MBs
-systray.tooltip.insync=InSync
+systray.tooltip.in_sync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
 systray.tooltip.up.mb=UP {0} MBs
@@ -1201,7 +1201,7 @@ transfers.local=locale
 transfers.pending=In corso
 transfers.progress=Avanzamemnto
 transfers.queued=accodato
-transfers.remotehashing=In attesa di richieste
+transfers.remote_hashing=In attesa di richieste
 transfers.requested=richiesto
 transfers.searching=Ricerca...
 transfers.to=A
@@ -1241,21 +1241,21 @@ white_list.name=Aggiungi ai percorsi da ignorare
 winutils.shortcut.description=Questo collegamento \u00E8 stato aggiunto da PowerFolder
 
 wizard.backup_panel.folder_backup_success=Hai impostato correttamente una cartella di backup\!\n
-wizard.backup_panel.pcsjoin=Ora anche altri computer possono aggiungersi a questa cartella
+wizard.backup_panel.pcs_join=Ora anche altri computer possono aggiungersi a questa cartella
 wizard.backup_panel.select=Si prega di selezionare la directory da backuppare
-wizard.basicsetup.computer_name=Nome di questo computer
-wizard.basicsetup.default_folder_name=Files sincronizzati
-wizard.basicsetup.lanonly=solo LAN
-wizard.basicsetup.networking=Connetti a
-wizard.basicsetup.private=LAN e Internet
-wizard.basicsetup.title=Impostazioni di base
-wizard.basicsetup.upload.text=La velocit\u00E0 illimitata di connessione consentir\u00E0 un numero di connessioni illimitate.
-wizard.basicsetup.upload.title=Velocit\u00E0 di connessione illimitata
+wizard.basic_setup.computer_name=Nome di questo computer
+wizard.basic_setup.default_folder_name=Files sincronizzati
+wizard.basic_setup.lan_only=solo LAN
+wizard.basic_setup.networking=Connetti a
+wizard.basic_setup.private=LAN e Internet
+wizard.basic_setup.title=Impostazioni di base
+wizard.basic_setup.upload.text=La velocit\u00E0 illimitata di connessione consentir\u00E0 un numero di connessioni illimitate.
+wizard.basic_setup.upload.title=Velocit\u00E0 di connessione illimitata
 wizard.choose_location.select=Selezionare la directory
-wizard.choosedisklocation.calculating_directory_size=Sto calcolando la dimensione della directory...
-wizard.choosedisklocation.directory_size=La dimensione della directory \u00E8 {0}
-wizard.choosedisklocation.select=Scegli la directory
-wizard.choosedisklocation.title=Percorso su disco
+wizard.choose_disk_location.calculating_directory_size=Sto calcolando la dimensione della directory...
+wizard.choose_disk_location.directory_size=La dimensione della directory \u00E8 {0}
+wizard.choose_disk_location.select=Scegli la directory
+wizard.choose_disk_location.title=Percorso su disco
 wizard.control.back=< Precedente
 wizard.control.back.description=Torna al passo precedente del wizard
 wizard.control.cancel=Cancella
@@ -1269,25 +1269,25 @@ wizard.control.next.description=Vai al passo successivo del wizard
 wizard.create_folder.failed=Errore nella creazione del PowerFolder.
 wizard.create_folder.title=Sto creando il PowerFolder
 wizard.create_folder.working=Creazione del PowerFolder, attendere prego.
-wizard.filesharing.sharedsuccess=Hai condiviso una nuova cartella\!\nAltri utenti ora potranno accedervi
+wizard.file_sharing.shared_success=Hai condiviso una nuova cartella\!\nAltri utenti ora potranno accedervi
 wizard.folder_invitation.intro=Hai ricevuto un invito da {0}
 wizard.folder_invitation.title=Invito alla cartella
 wizard.host_panel.folder_host_success=Hai impostato correttamente una cartella di host\!\n
-wizard.host_panel.pcsjoin=Ora gli altri computer possono unirsi a questa cartella
+wizard.host_panel.pcs_join=Ora gli altri computer possono unirsi a questa cartella
 wizard.host_panel.select=Si prega di selezionare la directory per l'host
-wizard.invite.selectlocaldirectory=Si prega di selezionare la directory locale per questi file
-wizard.load_invitation.addtofriends=Aggiungi {0} agli amici
-wizard.load_invitation.choosefile=Scegli il file dell'invito
+wizard.invite.select_local_directory=Si prega di selezionare la directory locale per questi file
+wizard.load_invitation.add_to_friends=Aggiungi {0} agli amici
+wizard.load_invitation.choose_file=Scegli il file dell'invito
 wizard.load_invitation.select=Scegli il file dell'invito
-wizard.load_invitation.selectfile=Scegli il file dell'invito
+wizard.load_invitation.select_file=Scegli il file dell'invito
 wizard.load_invitation.title=Carica un invito
 wizard.login_online_storage.setup_default=Impostazioni di default della cartella sincronizzata.
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=Avete impostato correttamente la cartella per il progetto\!\n
 wizard.project_panel.select=Si prega di selezionare la directory per il progetto
-wizard.projectname.choose=Scegli il nome del progetto
-wizard.projectname.entername=Inserisci il nome del tuo progetto
-wizard.projectname.title=Carica un invito
+wizard.project_name.choose=Scegli il nome del progetto
+wizard.project_name.enter_name=Inserisci il nome del tuo progetto
+wizard.project_name.title=Carica un invito
 wizard.send_invitations.invitation_text=Inserisci un messaggio per il destinatario
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=Per aggiungersi ad una cartella sono necessari i file di invito.
@@ -1297,36 +1297,36 @@ wizard.send_invitations.save_to_file=Salva come file
 wizard.send_invitations.send_by_mail=Invia per email
 wizard.send_invitations.send_invitation=Invia invito
 wizard.send_invitations.title=Salva un invito
-wizard.sendinvitations.offline=Non connesso
-wizard.sendinvitations.sendsuccess=Invito spedito
-wizard.sendinvitations.sendsuccessinfo=L'invito \u00E8 stato mandato con successo.
-wizard.setup_folder.sendinvitation=Manda un invito pi\u00F9 tardi
+wizard.send_invitations.offline=Non connesso
+wizard.send_invitations.send_success=Invito spedito
+wizard.send_invitations.send_success_info=L'invito \u00E8 stato mandato con successo.
+wizard.setup_folder.send_invitation=Manda un invito pi\u00F9 tardi
 wizard.setup_folder.title=Crea caratella
 wizard.setup_folder.transfer_mode=Trasferimento
-wizard.setupdns.dyndnshomepage=Dyndns Homepage
-wizard.setupdns.enterdns=Inserisci il tuo dns (dinamico)
-wizard.setupdns.improvesread=Aumenta la tua raggiungibilit\u00E0. In ogni caso non \u00E8 necessario.
-wizard.setupdns.nodnssetup=Non hai impostato ancora alcun dns (dinamico)\!
-wizard.setupdns.title=Imposta un dns (dinamico)
-wizard.setupdns.validate=Validazione
-wizard.setupsuccess=Setup completato
-wizard.successjoin=Ti sei aggiunto con successo alla cartella\!
+wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
+wizard.setup_dns.enter_dns=Inserisci il tuo dns (dinamico)
+wizard.setup_dns.improves_read=Aumenta la tua raggiungibilit\u00E0. In ogni caso non \u00E8 necessario.
+wizard.setup_dns.no_dns_setup=Non hai impostato ancora alcun dns (dinamico)\!
+wizard.setup_dns.title=Imposta un dns (dinamico)
+wizard.setup_dns.validate=Validazione
+wizard.setup_success=Setup completato
+wizard.success_join=Ti sei aggiunto con successo alla cartella\!
 wizard.sync_pcs_panel.select=Seleziona da directory da sincronizzare
-wizard.syncpcspanel.foldersyncsuccess=Hai impostato con successo una cartella mirror\!\n
-wizard.syncpcspanel.pcsjoin=Ora sei pronto a far accedere pi\u00F9 PC in questa cartella
-wizard.webservice.enteraccount=Inserite i vostri dati per fare il login nell'Online Storage
-wizard.webservice.learnmore=Cos'\u00E8 il PowerFolder Online Storage?
+wizard.sync_pcs_panel.folder_sync_success=Hai impostato con successo una cartella mirror\!\n
+wizard.sync_pcs_panel.pcs_join=Ora sei pronto a far accedere pi\u00F9 PC in questa cartella
+wizard.webservice.enter_account=Inserite i vostri dati per fare il login nell'Online Storage
+wizard.webservice.learn_more=Cos'\u00E8 il PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
-wizard.webservice.mirrorchoosefolder=Scegli una cartella di cui fare il backup dal PowerFolder Online Storage
-wizard.webservice.mirrorsetup=Backup della Cartella dall'Online Storage
+wizard.webservice.mirror_choose_folder=Scegli una cartella di cui fare il backup dal PowerFolder Online Storage
+wizard.webservice.mirror_setup=Backup della Cartella dall'Online Storage
 wizard.webservice.password=Password
 wizard.webservice.register=Registra un nuovo Account
 wizard.webservice.username=Email
-wizard.whattodo.backup_folder=Backup di una cartella
-wizard.whattodo.custom_sync=Condividi una cartella(personalizzato)
-wizard.whattodo.hostwork=Ospita una cartella
-wizard.whattodo.load_invite=Apri il file d'invito
-wizard.whattodo.openonlinedocumentation=Apri la documentazione online
-wizard.whattodo.projectwork=Sincronizza un progetto
-wizard.whattodo.synchronized_folder=Imposta una cartella sincronizzata
-wizard.whattodo.title=Che cosa vuoi fare?
+wizard.what_to_do.backup_folder=Backup di una cartella
+wizard.what_to_do.custom_sync=Condividi una cartella(personalizzato)
+wizard.what_to_do.host_work=Ospita una cartella
+wizard.what_to_do.load_invite=Apri il file d'invito
+wizard.what_to_do.open_online_documentation=Apri la documentazione online
+wizard.what_to_do.project_work=Sincronizza un progetto
+wizard.what_to_do.synchronized_folder=Imposta una cartella sincronizzata
+wizard.what_to_do.title=Che cosa vuoi fare?
