--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1027,17 +1027,17 @@ remove_from_recycle_bin_confimation.title=Verwijder bestanden?
 ##remove_previews_action.text=Do you want to remove all preview folders?
 ##remove_previews_action.title=Remove all preview folders
 
-removefriend.description=verwijder de gebruiker uit de vriendenlijst
-removefriend.key=r
-removefriend.name=Verwijder uit vriendenlijst
+remove_friend.description=verwijder de gebruiker uit de vriendenlijst
+remove_friend.key=r
+remove_friend.name=Verwijder uit vriendenlijst
 
-removemodifierfriend.description=Verwijder de bewerker van dit bestand van de vriendenlijst
-removemodifierfriend.key=V
-removemodifierfriend.name=Verwijder bewerker uit vriendenlijst
+remove_modifier_friend.description=Verwijder de bewerker van dit bestand van de vriendenlijst
+remove_modifier_friend.key=V
+remove_modifier_friend.name=Verwijder bewerker uit vriendenlijst
 
-requestfilelist.description=Ververst de bestandenlijst van andere leden van deze folder
-requestfilelist.key=V
-requestfilelist.name=Vraag om nieuwe bestandenlijst
+request_file_list.description=Ververst de bestandenlijst van andere leden van deze folder
+request_file_list.key=V
+request_file_list.name=Vraag om nieuwe bestandenlijst
 
 requestnetfolderlist.description=Ververst de lijst van publieke folders
 requestnetfolderlist.key=V
@@ -1046,20 +1046,20 @@ requestnetfolderlist.name=Ververs lijst
 restore.busy.description=Verplaats betanden van de PowerFolder prullenbak naar uw folder
 restore.busy.title=Herstel bestand(en)
 
-restorefile.description=Maak verwijdering van bestand ongedaan
-restorefile.key=h
-restorefile.name=Herstel bestand
+restore_file.description=Maak verwijdering van bestand ongedaan
+restore_file.key=h
+restore_file.name=Herstel bestand
 
-rootpanel.connected_users=Verbonden gebruikers
-rootpanel.friends=Vrienden
+root_panel.connected_users=Verbonden gebruikers
+root_panel.friends=Vrienden
 
-##scanallfolders.description=Synchronizes all folders now (F5)
-scanallfolders.key=F
-scanallfolders.name=Sync Folders
+##scan_all_folders.description=Synchronizes all folders now (F5)
+scan_all_folders.key=F
+scan_all_folders.name=Sync Folders
 
-##scanfolder.description=Checks folder for file changes now (Alt-1)
-scanfolder.key=s
-scanfolder.name=Sync Nu
+##scan_folder.description=Checks folder for file changes now (Alt-1)
+scan_folder.key=s
+scan_folder.name=Sync Nu
 
 ##select_invitation.folder_text=Select folder to send invitation for
 ##select_invitation.message_text=Enter a message for the receiver
@@ -1071,27 +1071,27 @@ send_invitation.example_email_address=e-mail@domein.nl
 ##send_invitation.no_users=No users selected
 ##send_invitation.select_user.text=Select user
 
-##sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
-##sendinvitation.allFolders.title={0} already on all folders
-sendinvitation.ask_emailaddres.message=E-mail adres om Invitatie naar te versturen
-sendinvitation.ask_emailaddres.title=E-mail adres
-sendinvitation.body=Hallo {0},<br><br>{1} nodigt u uit om lid te worden van de PowerFolder '{2}'<br>Met deze invitatie krijgt u toegang tot de bestanden in die folder.<br><br>Gebruiksaanwijzing\:<br>1) Om de toegang tot de bestanden te krijgen moet u het gratis programma <b>PowerFolder</b> downloaden en installeren van <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Na installatie van <b>PowerFolder</b> dubbel klik op het bijgevoegde Invitatie bestand.<br><br>Meer Documentatie\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Met vriendelijk groet,<br>{1}
-sendinvitation.description=Nodig een gebruiker uit om lid te worden van een folder
-sendinvitation.email=Naar e-mail...
-sendinvitation.folder.text=Verzend invitatie aan
-sendinvitation.folder.title=Verzend invitatie
-sendinvitation.key=i
-sendinvitation.name=Verzend invitatie
-sendinvitation.placetostore=Kies een plek om de invitatie op te slaan
-sendinvitation.subject=Invitatie voor een PowerFolder\: {0}
-sendinvitation.toclipboard=Naar klembord...
-sendinvitation.todisk=Naar disk...
+##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
+##send_invitation.allFolders.title={0} already on all folders
+send_invitation.ask_emailaddres.message=E-mail adres om Invitatie naar te versturen
+send_invitation.ask_emailaddres.title=E-mail adres
+send_invitation.body=Hallo {0},<br><br>{1} nodigt u uit om lid te worden van de PowerFolder '{2}'<br>Met deze invitatie krijgt u toegang tot de bestanden in die folder.<br><br>Gebruiksaanwijzing\:<br>1) Om de toegang tot de bestanden te krijgen moet u het gratis programma <b>PowerFolder</b> downloaden en installeren van <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Na installatie van <b>PowerFolder</b> dubbel klik op het bijgevoegde Invitatie bestand.<br><br>Meer Documentatie\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Met vriendelijk groet,<br>{1}
+send_invitation.description=Nodig een gebruiker uit om lid te worden van een folder
+send_invitation.email=Naar e-mail...
+send_invitation.folder.text=Verzend invitatie aan
+send_invitation.folder.title=Verzend invitatie
+send_invitation.key=i
+send_invitation.name=Verzend invitatie
+send_invitation.placetostore=Kies een plek om de invitatie op te slaan
+send_invitation.subject=Invitatie voor een PowerFolder\: {0}
+send_invitation.toclipboard=Naar klembord...
+send_invitation.todisk=Naar disk...
 
-setmasternode.description=Selecteer de manager voor de vriendenlijst. De lijst wordt gekopieerd van deze gebruiker
-setmasternode.dialog.text=Selecteer de manager voor de vriendenlijst
-setmasternode.dialog.title=Vriendelijst administrator
-setmasternode.key=a
-setmasternode.name=Selecteer de Admin gebruiker
+set_master_node.description=Selecteer de manager voor de vriendenlijst. De lijst wordt gekopieerd van deze gebruiker
+set_master_node.dialog.text=Selecteer de manager voor de vriendenlijst
+set_master_node.dialog.title=Vriendelijst administrator
+set_master_node.key=a
+set_master_node.name=Selecteer de Admin gebruiker
 
 ##setup.description=Sets up new or joins existing PowerFolders
 ##setup.key=s
@@ -1101,32 +1101,32 @@ setmasternode.name=Selecteer de Admin gebruiker
 ##show_preview.key=S
 ##show_preview.name=Show Preview Folders
 
-showfileinfo.description=Toont gedetaileerde informatie over het geselecteerde bestand.
-showfileinfo.key=B
-showfileinfo.name=Bestandseigenschappen
+show_file_info.description=Toont gedetaileerde informatie over het geselecteerde bestand.
+show_file_info.key=B
+show_file_info.name=Bestandseigenschappen
 
-##showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
-showhidefiledetails.key=d
-showhidefiledetails.name=Details
+##show_hide_file_details.description=Shows/Hides detailed information about the selected file (Alt-4)
+show_hide_file_details.key=d
+show_hide_file_details.name=Details
 
 splash.version=Versie {0}
 
 ##start.file.unable.text=Unable to start\n{0}
 ##start.file.unable.title=Unable to start
 
-startdownloads.description=Opent het geselecteerde bestand
-startdownloads.key=O
-startdownloads.name=Open
+start_downloads.description=Opent het geselecteerde bestand
+start_downloads.key=O
+start_downloads.name=Open
 
 status.download=Down\: %.2f KB/s
 status.port=Poort\: {0}
 status.upload=Up\: %.2f KB/s
 
-##statusbar.status_change.connected=PowerFolder is connected
-##statusbar.status_change.disabled=PowerFolder is disabled
-##statusbar.status_change.disconnected=PowerFolder is disconnected
-##statusbar.status_change.title=Connection Status
-statusbar.synchronizing=Synchronizeren...
+##status_bar.status_change.connected=PowerFolder is connected
+##status_bar.status_change.disabled=PowerFolder is disabled
+##status_bar.status_change.disconnected=PowerFolder is disconnected
+##status_bar.status_change.title=Connection Status
+status_bar.synchronizing=Synchronizeren...
 
 ##sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview.
 ##sync_folder_rights.key=S
@@ -1138,31 +1138,31 @@ synchronisation.warning.automatic_deletions_notice=Deze mode zal ook bestand ver
 synchronisation.warning.explanation=U heeft synchronisatie profiel '{0}' gekozen voor folder {1}.
 synchronisation.warning.title=Activeer synchronisatieprofiel {0} voor {1}
 
-##syncprofile.autodownload_friends.name=Auto-download friends
-##syncprofile.automatic_download.name=Automatic download
-##syncprofile.automatic_synchronization.name=Automatic synchronization
-##syncprofile.backup_source.name=Backup (source)
-##syncprofile.backup_target.name=Backup (target)
-syncprofile.custom.name=Aangepast...
-##syncprofile.disabled.name=Disabled
-##syncprofile.host_files.name=Host files
-##syncprofile.manual_synchronization.name=Manual synchronization
-##syncprofile.no_sync.name=No synchronization
+##transfer_mode.auto_download_friends.name=Auto-download friends
+##transfer_mode.automatic_download.name=Automatic download
+##transfer_mode.automatic_synchronization.name=Automatic synchronization
+##transfer_mode.backup_source.name=Backup (source)
+##transfer_mode.backup_target.name=Backup (target)
+transfer_mode.custom.name=Aangepast...
+##transfer_mode.disabled.name=Disabled
+##transfer_mode.host_files.name=Host files
+##transfer_mode.manual_synchronization.name=Manual synchronization
+##transfer_mode.no_sync.name=No synchronization
 
-##systemservice.options.info1=Use these options install/uninstall
-##systemservice.options.info2=PowerFolder as system service.
-##systemservice.options.install=Install
-##systemservice.options.title=PowerFolder System Service
-##systemservice.options.uninstall=Uninstall
+##system_service.options.info1=Use these options install/uninstall
+##system_service.options.info2=PowerFolder as system service.
+##system_service.options.install=Install
+##system_service.options.title=PowerFolder System Service
+##system_service.options.uninstall=Uninstall
 
 systray.exit=Exit
 systray.hide=Verberg
 systray.powerfolder=PowerFolder v{0}
 systray.show=Show
-systray.syncall=Sync Folders
+systray.sync_all=Sync Folders
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.down.mb=Down {0} MBs
-systray.tooltip.insync=InSync
+systray.tooltip.in_sync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=Up {0} KBs
 systray.tooltip.up.mb=Up {0} MBs
@@ -1201,7 +1201,7 @@ transfers.local=Lokaal
 transfers.pending=Later
 transfers.progress=Voortgang
 transfers.queued=in wachtrij
-##transfers.remotehashing=Preparing
+##transfers.remote_hashing=Preparing
 transfers.requested=in wachtrij
 transfers.searching=Zoeken...
 transfers.to=Naar
@@ -1241,21 +1241,21 @@ transfers.to=Naar
 winutils.shortcut.description=Deze snelkoppeling werd geplaatst door PowerFolder
 
 ##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
-##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.pcs_join=Other computers can join this folder now
 ##wizard.backup_panel.select=Please select the directory which should be backed up
-##wizard.basicsetup.computer_name=Name of this computer
-##wizard.basicsetup.default_folder_name=Synchronized Files
-wizard.basicsetup.lanonly=Alleen LAN
-wizard.basicsetup.networking=Verbind met
-wizard.basicsetup.private=LAN en Internet
-wizard.basicsetup.title=Basis Setup
-##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
-##wizard.basicsetup.upload.title=Unlimited connection speed
+##wizard.basic_setup.computer_name=Name of this computer
+##wizard.basic_setup.default_folder_name=Synchronized Files
+wizard.basic_setup.lan_only=Alleen LAN
+wizard.basic_setup.networking=Verbind met
+wizard.basic_setup.private=LAN en Internet
+wizard.basic_setup.title=Basis Setup
+##wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+##wizard.basic_setup.upload.title=Unlimited connection speed
 ##wizard.choose_location.select=Please select the directory
-##wizard.choosedisklocation.calculating_directory_size=Calculating size of directory...
-##wizard.choosedisklocation.directory_size=Directory size {0}
-wizard.choosedisklocation.select=Selecteer map
-wizard.choosedisklocation.title=Disk lokatie
+##wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
+##wizard.choose_disk_location.directory_size=Directory size {0}
+wizard.choose_disk_location.select=Selecteer map
+wizard.choose_disk_location.title=Disk lokatie
 wizard.control.back=< Vorige
 ##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Annuleren
@@ -1269,25 +1269,25 @@ wizard.control.next=Volgende >
 ##wizard.create_folder.failed=Failed to create PowerFolder.
 ##wizard.create_folder.title=Creating PowerFolder
 ##wizard.create_folder.working=Creating PowerFolder, please wait.
-wizard.filesharing.sharedsuccess=Folder wordt nu gedeeld\!\nAndere gebruikers kunnen nu lid worden
+wizard.file_sharing.shared_success=Folder wordt nu gedeeld\!\nAndere gebruikers kunnen nu lid worden
 ##wizard.folder_invitation.intro=You have received an invitation from {0}
 ##wizard.folder_invitation.title=Folder Invitation
 ##wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
-##wizard.host_panel.pcsjoin=Other computers can join this folder now
+##wizard.host_panel.pcs_join=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
-##wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.load_invitation.addtofriends=Voeg {0} toe aan vrienden
-wizard.load_invitation.choosefile=Kies een invitatie bestand
+##wizard.invite.select_local_directory=Please select local target directory for the files
+wizard.load_invitation.add_to_friends=Voeg {0} toe aan vrienden
+wizard.load_invitation.choose_file=Kies een invitatie bestand
 wizard.load_invitation.select=Selecteer een invitatie bestand
-wizard.load_invitation.selectfile=Selecteer een invitatie bestand
+wizard.load_invitation.select_file=Selecteer een invitatie bestand
 wizard.load_invitation.title=Open een invitatie
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Wizard
 ##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 ##wizard.project_panel.select=Please select the project directory
-wizard.projectname.choose=Kies project naam
-wizard.projectname.entername=Vul de naam van uw project in
-wizard.projectname.title=Open invitatie
+wizard.project_name.choose=Kies project naam
+wizard.project_name.enter_name=Vul de naam van uw project in
+wizard.project_name.title=Open invitatie
 ##wizard.send_invitations.invitation_text=Enter a message for the receiver
 ##wizard.send_invitations.invitation_text_sample=
 ##wizard.send_invitations.join=Invitation files are required to join a folder.
@@ -1297,36 +1297,36 @@ wizard.send_invitations.save_to_file=Opslaan als bestand
 wizard.send_invitations.send_by_mail=Verzend per e-mail
 wizard.send_invitations.send_invitation=Verzend invitatie
 wizard.send_invitations.title=Sla een invitatie op
-wizard.sendinvitations.offline=Niet verbonden
-wizard.sendinvitations.sendsuccess=Invitatie verzonden
-wizard.sendinvitations.sendsuccessinfo=U heeft de invitatie succesvol verzonden.
-##wizard.setup_folder.sendinvitation=Send invitations afterwards
+wizard.send_invitations.offline=Niet verbonden
+wizard.send_invitations.send_success=Invitatie verzonden
+wizard.send_invitations.send_success_info=U heeft de invitatie succesvol verzonden.
+##wizard.setup_folder.send_invitation=Send invitations afterwards
 ##wizard.setup_folder.title=Create Folder
 ##wizard.setup_folder.transfer_mode=Transfer mode
-wizard.setupdns.dyndnshomepage=Dyndns Homepage
-wizard.setupdns.enterdns=Vult uw (dynamic) dns in
-wizard.setupdns.improvesread=Dit bevorderd uw bereikbaarheid als een een dynamisch IP adres heeft (echter niet vereist), dit is niet nodig als u een vast IP adres heeft
-wizard.setupdns.nodnssetup=U heeft nog geen (dynamic) dns adres\!
-wizard.setupdns.title=Setup (dynamic) dns
-##wizard.setupdns.validate=Validate
-wizard.setupsuccess=Setup success
-##wizard.successjoin=You have successfully joined the folder\!
+wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
+wizard.setup_dns.enter_dns=Vult uw (dynamic) dns in
+wizard.setup_dns.improves_read=Dit bevorderd uw bereikbaarheid als een een dynamisch IP adres heeft (echter niet vereist), dit is niet nodig als u een vast IP adres heeft
+wizard.setup_dns.no_dns_setup=U heeft nog geen (dynamic) dns adres\!
+wizard.setup_dns.title=Setup (dynamic) dns
+##wizard.setup_dns.validate=Validate
+wizard.setup_success=Setup success
+##wizard.success_join=You have successfully joined the folder\!
 ##wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
-wizard.syncpcspanel.foldersyncsuccess=U heeft succesvol een "exacte kopie" van een folder op gezet\!\n
-wizard.syncpcspanel.pcsjoin=U kunt nu meerdere PCs lid maken van deze folder
-##wizard.webservice.enteraccount=Please enter your account details to login to Online Storage
-##wizard.webservice.learnmore=What is PowerFolder Online Storage?
+wizard.sync_pcs_panel.folder_sync_success=U heeft succesvol een "exacte kopie" van een folder op gezet\!\n
+wizard.sync_pcs_panel.pcs_join=U kunt nu meerdere PCs lid maken van deze folder
+##wizard.webservice.enter_account=Please enter your account details to login to Online Storage
+##wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Opslag Inloggen
-##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by PowerFolder Online Storage
-##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
+##wizard.webservice.mirror_choose_folder=Choose a folder to be backed up by PowerFolder Online Storage
+##wizard.webservice.mirror_setup=Backup Folder by Online Storage
 wizard.webservice.password=Wachtwoord
 wizard.webservice.register=Registreer een nieuw account  
 wizard.webservice.username=E-mail
-##wizard.whattodo.backup_folder=Backup a folder
-##wizard.whattodo.custom_sync=Share a folder (customized)
-##wizard.whattodo.hostwork=Host a folder
-##wizard.whattodo.load_invite=Open invitation file
-wizard.whattodo.openonlinedocumentation=Open Documentatie op internet
-wizard.whattodo.projectwork=Project synchroniseren
-##wizard.whattodo.synchronized_folder=Setup a synchronized folder
-wizard.whattodo.title=Wat wilt u doen?
+##wizard.what_to_do.backup_folder=Backup a folder
+##wizard.what_to_do.custom_sync=Share a folder (customized)
+##wizard.what_to_do.host_work=Host a folder
+##wizard.what_to_do.load_invite=Open invitation file
+wizard.what_to_do.open_online_documentation=Open Documentatie op internet
+wizard.what_to_do.project_work=Project synchroniseren
+##wizard.what_to_do.synchronized_folder=Setup a synchronized folder
+wizard.what_to_do.title=Wat wilt u doen?
