--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -896,17 +896,17 @@ remove_previews_action.title=Remover todas as pastas de pr\u00e9-visualiza\u00e7
 remove_previews_action.text=Voc\u00ea quer remover todas as pastas de pr\u00e9-visualiza\u00e7\u00e3o?
 remove_previews_action.remove=Remover
 
-removefriend.description=Remove usuario da lista de amigos
-removefriend.key=r
-removefriend.name=Remover Amigo
+remove_friend.description=Remove usuario da lista de amigos
+remove_friend.key=r
+remove_friend.name=Remover Amigo
 
-removemodifierfriend.description=Remove o modificador de arquivo da lista de amigos
-removemodifierfriend.key=r
-removemodifierfriend.name=Remover Modificador da lista de amigos
+remove_modifier_friend.description=Remove o modificador de arquivo da lista de amigos
+remove_modifier_friend.key=r
+remove_modifier_friend.name=Remover Modificador da lista de amigos
 
-requestfilelist.description=Renova a lista de arquivos daquela pasta a partir de usu\u00e1rios remotos
-requestfilelist.key=a
-requestfilelist.name=Solicitar nova Lista de Arquivos
+request_file_list.description=Renova a lista de arquivos daquela pasta a partir de usu\u00e1rios remotos
+request_file_list.key=a
+request_file_list.name=Solicitar nova Lista de Arquivos
 
 requestnetfolderlist.description=Renova a lista de pastas publicas
 requestnetfolderlist.key=r
@@ -915,74 +915,74 @@ requestnetfolderlist.name=Renovar lista
 restore.busy.description=Movendo arquivos da Lixeira do PowerFolder para sua pasta
 restore.busy.title=Restaurando arquivo(s)
 
-restorefile.description=Recupera arquivo
-restorefile.key=r
-restorefile.name=Restaurar arquivo
+restore_file.description=Recupera arquivo
+restore_file.key=r
+restore_file.name=Restaurar arquivo
 
-rootpanel.connected_users=Usu\u00e1rios conectados
-rootpanel.friends=Amigos
+root_panel.connected_users=Usu\u00e1rios conectados
+root_panel.friends=Amigos
 
-scanallfolders.description=Sincroniza todas as pastas agora (F5)
-scanallfolders.key=P
-scanallfolders.name=Sincronizar Pastas
+scan_all_folders.description=Sincroniza todas as pastas agora (F5)
+scan_all_folders.key=P
+scan_all_folders.name=Sincronizar Pastas
 
-scanfolder.description=Verifica se pastas cont\u00e9m arquivos alterados agora(Alt-1)
-scanfolder.key=s
-scanfolder.name=Sincronizar Agora
+scan_folder.description=Verifica se pastas cont\u00e9m arquivos alterados agora(Alt-1)
+scan_folder.key=s
+scan_folder.name=Sincronizar Agora
 
 searchfriends.description=Busca um amigo
 searchfriends.key=B
 searchfriends.name=Buscar
 
-sendinvitation.allFolders.text=N\u00e3o \u00e9 poss\u00edvel convidar {0} para nenhuma pasta\nUsu\u00e1rio j\u00e1 est\u00e1 associado em todas as suas pastas
-sendinvitation.allFolders.title={0} j\u00e1 est\u00e1 em todas as pastas
-sendinvitation.ask_emailaddres.message=Email destino do convite
-sendinvitation.ask_emailaddres.title=Email
-sendinvitation.body=Ol\u00e1 {0},<br><br>{1} est\u00e1 te convidado para a pasta PowerFolder '{2}'<br>Este convite \u00e9 usado para acessar a pasta privada mantida por {1}.<br><br>1) Para acessar os arquivos voc\u00ea precisa baixar e instalar a vers\u00e3o gratuita do<br>programa PowerFolder dispon\u00edvel em <br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>Para maiores informa\u00e7\u00f5es, ajuda na instala\u00e7\u00e3o ou na utiliza\u00e7\u00e3o do PowerFolder por favor<br>Visite nossa p\u00e1gina de Documenta\u00e7\u00e3o em http\://docs.powerfolder.com<br><br>Atenciosamente,<br>Equipe de Desenvolvimento do PowerFolder<br>PowerFolder, Compartilhamento Profissional de Pastas<br>
-sendinvitation.description=Convida usu\u00e1rios para pastas
-sendinvitation.email=Para enviar email...
-sendinvitation.example_emailaddress=email@domain.com
-sendinvitation.folder.text=Enviar convite para
-sendinvitation.folder.title=Enviar convite
-sendinvitation.key=i
-sendinvitation.multi_users=V\u00e1rios usu\u00e1rios selecionados
-sendinvitation.name=Enviar convite
-sendinvitation.no_users=Nenhum usu\u00e1rio selecionado
-sendinvitation.placetostore=Escolha um lugar para armazenar o convite
-sendinvitation.subject=Convite para a pasta PowerFolder '{0}'
-sendinvitation.toclipboard=Para \u00e1rea de transfer\u00eancia...
-sendinvitation.todisk=Para disco...
-sendinvitation.user.text=Selecione a pasta para convidar {0}
-sendinvitation.user.title=Convide {0} para a pasta
+send_invitation.allFolders.text=N\u00e3o \u00e9 poss\u00edvel convidar {0} para nenhuma pasta\nUsu\u00e1rio j\u00e1 est\u00e1 associado em todas as suas pastas
+send_invitation.allFolders.title={0} j\u00e1 est\u00e1 em todas as pastas
+send_invitation.ask_emailaddres.message=Email destino do convite
+send_invitation.ask_emailaddres.title=Email
+send_invitation.body=Ol\u00e1 {0},<br><br>{1} est\u00e1 te convidado para a pasta PowerFolder '{2}'<br>Este convite \u00e9 usado para acessar a pasta privada mantida por {1}.<br><br>1) Para acessar os arquivos voc\u00ea precisa baixar e instalar a vers\u00e3o gratuita do<br>programa PowerFolder dispon\u00edvel em <br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>Para maiores informa\u00e7\u00f5es, ajuda na instala\u00e7\u00e3o ou na utiliza\u00e7\u00e3o do PowerFolder por favor<br>Visite nossa p\u00e1gina de Documenta\u00e7\u00e3o em http\://docs.powerfolder.com<br><br>Atenciosamente,<br>Equipe de Desenvolvimento do PowerFolder<br>PowerFolder, Compartilhamento Profissional de Pastas<br>
+send_invitation.description=Convida usu\u00e1rios para pastas
+send_invitation.email=Para enviar email...
+send_invitation.example_emailaddress=email@domain.com
+send_invitation.folder.text=Enviar convite para
+send_invitation.folder.title=Enviar convite
+send_invitation.key=i
+send_invitation.multi_users=V\u00e1rios usu\u00e1rios selecionados
+send_invitation.name=Enviar convite
+send_invitation.no_users=Nenhum usu\u00e1rio selecionado
+send_invitation.placetostore=Escolha um lugar para armazenar o convite
+send_invitation.subject=Convite para a pasta PowerFolder '{0}'
+send_invitation.toclipboard=Para \u00e1rea de transfer\u00eancia...
+send_invitation.todisk=Para disco...
+send_invitation.user.text=Selecione a pasta para convidar {0}
+send_invitation.user.title=Convide {0} para a pasta
 
-setmasternode.description=Seleciona o usu\u00e1rio administrador da sua lista de amigos. Lista de amigos carregados a partir do administrador
-setmasternode.dialog.text=Selecione o administrador para sua lista de amigos
-setmasternode.dialog.title=Administrador da lista de amigos
-setmasternode.key=a
-setmasternode.name=Selecione Usu\u00e1rio Administrador
+set_master_node.description=Seleciona o usu\u00e1rio administrador da sua lista de amigos. Lista de amigos carregados a partir do administrador
+set_master_node.dialog.text=Selecione o administrador para sua lista de amigos
+set_master_node.dialog.title=Administrador da lista de amigos
+set_master_node.key=a
+set_master_node.name=Selecione Usu\u00e1rio Administrador
 
-showfileinfo.description=Mostra detalhes sobre arquivos selecionados
-showfileinfo.key=p
-showfileinfo.name=Propriedades de Arquivo
+show_file_info.description=Mostra detalhes sobre arquivos selecionados
+show_file_info.key=p
+show_file_info.name=Propriedades de Arquivo
 
-showhidefiledetails.description=Mostra/Esconde informa\u00e7\u00e3o detalhada sobre o arquivo selecionado (Alt-4)
-showhidefiledetails.key=d
-showhidefiledetails.name=Detalhes
+show_hide_file_details.description=Mostra/Esconde informa\u00e7\u00e3o detalhada sobre o arquivo selecionado (Alt-4)
+show_hide_file_details.key=d
+show_hide_file_details.name=Detalhes
 
 splash.version=Vers\u00e3o {0}
 
 start.file.unable.text=N\u00e3o \u00e9 poss\u00edvel iniciar\n{0}
 start.file.unable.title=N\u00e3o \u00e9 poss\u00edvel iniciar
 
-startdownloads.description=Abre os arquivos selecionados
-startdownloads.key=A
-startdownloads.name=Abrir
+start_downloads.description=Abre os arquivos selecionados
+start_downloads.key=A
+start_downloads.name=Abrir
 
 status.download=Baixado\: %.2f KB/s
 status.port=Porta\: {0}
 status.upload=Enviado\: %.2f KB/s
 
-statusbar.synchronizing=Sincronizando...
+status_bar.synchronizing=Sincronizando...
 
 synchronisation.notice.title=Perfil de sincroniza\u00e7\u00e3o em uso {0}
 synchronisation.warning.automatic_deletions=Este modo tamb\u00e9m sincronizar\u00e1 a exclus\u00e3o de arquivos\!\nContinuar?
@@ -993,26 +993,26 @@ synchronisation.warning.title=Ativar perfil de sincroniza\u00e7\u00e3o {0} para 
 syncprofile.autodownload_all.name=Baixa autom\u00e1tica
 syncprofile.backupsource.name=Backup (Fonte)
 syncprofile.backuptarget.name=Backup (Alvo)
-syncprofile.custom.name=Perfil personalizado
+transfer_mode.custom.name=Perfil personalizado
 syncprofile.manualdownload.name=Hospedando (baixa Manual)
-syncprofile.no_sync.name=Sem sincroniza\u00e7\u00e3o
+transfer_mode.no_sync.name=Sem sincroniza\u00e7\u00e3o
 syncprofile.projectwork.name=Projeto (Sincroniza\u00e7\u00e3o manual)
 syncprofile.syncpcs.name=Espelho
 
-systemservice.options.info1=Usar estas op\u00e7\u00f5es instalar/desinstalar
-systemservice.options.info2=PowerFolder como sistema de servi\u00e7o.
-systemservice.options.install=Instalar
-systemservice.options.title=Sistema de Sevi\u00e7o PowerFolder
-systemservice.options.uninstall=Desinstalar
+system_service.options.info1=Usar estas op\u00e7\u00f5es instalar/desinstalar
+system_service.options.info2=PowerFolder como sistema de servi\u00e7o.
+system_service.options.install=Instalar
+system_service.options.title=Sistema de Sevi\u00e7o PowerFolder
+system_service.options.uninstall=Desinstalar
 
 systray.exit=Sair
 systray.hide=Esconder
 systray.powerfolder=PowerFolder v{0}
 systray.show=Mostrar
-systray.syncall=Sincronizar Pastas
+systray.sync_all=Sincronizar Pastas
 systray.tooltip.down=Baixados {0} KBs
 systray.tooltip.down.mb=Baixados {0} MBs
-systray.tooltip.insync=Sincronizado
+systray.tooltip.in_sync=Sincronizado
 systray.tooltip.syncing=Sincronizando
 systray.tooltip.up=Carregado {0} KBs
 systray.tooltip.up.mb=Carregado {0} MBs
@@ -1050,7 +1050,7 @@ transfers.local=local
 transfers.pending=Pendente
 transfers.progress=Progresso
 transfers.queued=Enfileirado
-transfers.remotehashing=Preparando
+transfers.remote_hashing=Preparando
 transfers.requested=Requisitado
 transfers.searching=Buscando...
 transfers.to=Para
@@ -1079,17 +1079,17 @@ user.dir.videos=V\u00eddeos
 winutils.shortcut.description=Este atalho foi criado pelo PowerFolder
 
 wizard.backup_panel.folder_backup_success=Voc\u00ea configurou com sucesso o backup da pasta\!\n
-wizard.backup_panel.pcsjoin=Outros computadores j\u00e1 podem associar-se a esta pasta
+wizard.backup_panel.pcs_join=Outros computadores j\u00e1 podem associar-se a esta pasta
 wizard.backup_panel.select=Por favor selecione o diret\u00f3rio a ser feito o backup
-wizard.basicsetup.enternick=Por favor digite seu apelido
-wizard.basicsetup.lanonly=Apenas Rede Local
-wizard.basicsetup.networking=Conectar a
-wizard.basicsetup.private=Rede Local e Internet
-wizard.basicsetup.title=Configura\u00e7\u00e3o b\u00e1sica
-wizard.basicsetup.upload.text=Velocidade ilimitada de conex\u00e3o permite um n\u00famero ilimitado de conex\u00f5es.
-wizard.basicsetup.upload.title=Velocidade ilimitada de conex\u00e3o
-wizard.choosedisklocation.select=Selecione diret\u00f3rio
-wizard.choosedisklocation.title=Localiza\u00e7\u00e3o do disco
+wizard.basic_setup.enternick=Por favor digite seu apelido
+wizard.basic_setup.lan_only=Apenas Rede Local
+wizard.basic_setup.networking=Conectar a
+wizard.basic_setup.private=Rede Local e Internet
+wizard.basic_setup.title=Configura\u00e7\u00e3o b\u00e1sica
+wizard.basic_setup.upload.text=Velocidade ilimitada de conex\u00e3o permite um n\u00famero ilimitado de conex\u00f5es.
+wizard.basic_setup.upload.title=Velocidade ilimitada de conex\u00e3o
+wizard.choose_disk_location.select=Selecione diret\u00f3rio
+wizard.choose_disk_location.title=Localiza\u00e7\u00e3o do disco
 wizard.choose_location.select=Por favor selecione o diret\u00f3rio
 wizard.control.back=< Voltar
 wizard.control.back.description=Voltar para o passo anterior
@@ -1104,36 +1104,36 @@ wizard.control.next.description=Ir para pr\u00f3ximo passo
 wizard.create_folder.title=Criando pasta PowerFolder
 wizard.create_folder.failed=N\u00e3o foi poss\u00edvel criar pasta PowerFolder
 wizard.description=Abre assistente
-wizard.filesharing.sharedsuccess=A nova pasta est\u00e1 compartilhada\!\nOutros usu\u00e1rios j\u00e1 podem se associar
+wizard.file_sharing.shared_success=A nova pasta est\u00e1 compartilhada\!\nOutros usu\u00e1rios j\u00e1 podem se associar
 wizard.host_panel.folder_host_success=Voc\u00ea configurou uma pasta hospedeira com sucesso\!\n
-wizard.host_panel.pcsjoin=Outros computadores j\u00e1 podem associar-se a esta pasta
+wizard.host_panel.pcs_join=Outros computadores j\u00e1 podem associar-se a esta pasta
 wizard.host_panel.select=Por favor selecione o diret\u00f3rio para ser o hospedeiro
-wizard.invite.selectlocaldirectory=Por favor selecione o diret\u00f3rio local de destino para os arquivos
+wizard.invite.select_local_directory=Por favor selecione o diret\u00f3rio local de destino para os arquivos
 wizard.key=w
-wizard.load_invitation.addtofriends=Adicionar {0} em amigos
-wizard.load_invitation.choosefile=Escolher o arquivo de convite
+wizard.load_invitation.add_to_friends=Adicionar {0} em amigos
+wizard.load_invitation.choose_file=Escolher o arquivo de convite
 wizard.load_invitation.select=Selecionar arquivo de convite
-wizard.load_invitation.selectfile=Por favor selecione arquivo de convite
+wizard.load_invitation.select_file=Por favor selecione arquivo de convite
 wizard.load_invitation.title=Carregar convite
 wizard.name=Assistente
 wizard.pfwizard.title=Assistente
 wizard.project_panel.folder_project_success=Voc\u00ea configurou a pasta do projeto com sucesso\!\n
 wizard.project_panel.select=Por favor selecione o diret\u00f3tio do projeto
-wizard.projectname.choose=Escolha nome do projeto
-wizard.projectname.entername=Digite o nome do seu projeto
-wizard.projectname.title=Carrege convite
-wizard.sendinvitations.invitationtext=Digite uma mensagem para o destinat\u00e1tio
-wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.join=Um arquivos de convite ser\u00e1 necess\u00e1rio para permitir que outros se juntem a pasta.
-wizard.sendinvitations.neveruntrusted=Nunca fornce\u00e7a seus arquivos de convite para deconhecidos.
-wizard.sendinvitations.offline=Offline
-wizard.sendinvitations.overpf=Via PowerFolder agora
-wizard.sendinvitations.savetofile=Salvar como arquivo
-wizard.sendinvitations.sendbymail=Enviar por email
-wizard.sendinvitations.sendinvitation=Enviar convite
-wizard.sendinvitations.sendsuccess=Convite enviado
-wizard.sendinvitations.sendsuccessinfo=Voc\u00ea enviou o convite com sucesso.
-wizard.sendinvitations.title=Salvar convite
+wizard.project_name.choose=Escolha nome do projeto
+wizard.project_name.enter_name=Digite o nome do seu projeto
+wizard.project_name.title=Carrege convite
+wizard.send_invitations.invitationtext=Digite uma mensagem para o destinat\u00e1tio
+wizard.send_invitations.invitationtextsample=
+wizard.send_invitations.join=Um arquivos de convite ser\u00e1 necess\u00e1rio para permitir que outros se juntem a pasta.
+wizard.send_invitations.neveruntrusted=Nunca fornce\u00e7a seus arquivos de convite para deconhecidos.
+wizard.send_invitations.offline=Offline
+wizard.send_invitations.overpf=Via PowerFolder agora
+wizard.send_invitations.savetofile=Salvar como arquivo
+wizard.send_invitations.sendbymail=Enviar por email
+wizard.send_invitations.send_invitation=Enviar convite
+wizard.send_invitations.send_success=Convite enviado
+wizard.send_invitations.send_success_info=Voc\u00ea enviou o convite com sucesso.
+wizard.send_invitations.title=Salvar convite
 wizard.send_invitations.send_invitation=
 wizard.send_invitations.join=Arquivos de convite s\u00e3o necess\u00e1rios para juntar-se a uma pasta
 wizard.send_invitations.never_untrusted=Nunca forne\u00e7a seus arquivos de convite para deconhecidos.
@@ -1146,30 +1146,30 @@ wizard.send_invitations.over_powerfolder=Envie pelo PowerFolder agora
 wizard.setup_folder.title=Crie uma pasta
 send_invitation.no_users=
 
-wizard.setupdns.dyndnshomepage=Dyndns Homepage
-wizard.setupdns.enterdns=Digite seu dns (din\u00e2mico)
-wizard.setupdns.improvesread=Isto melhora sua acessibilidade por\u00e9m n\u00e3o \u00e9 obrigat\u00f3rio
-wizard.setupdns.nodnssetup=Voc\u00ea ainda n\u00e3o configurou um ender\u00ea\u00e7o dns (din\u00e2mico)\!
-wizard.setupdns.title=Configurar dns (din\u00e2mico)
-wizard.setupdns.validate=Validar 
-wizard.setupsuccess=Configura\u00e7\u00e3o bem sucedida
-wizard.successjoin=Voc\u00ea juntou-se a pasta com sucesso\!
-wizard.syncpcspanel.foldersyncsuccess=Voc\u00ea configurou uma pasta espelhada com sucesso\!\n
-wizard.syncpcspanel.pcsjoin=Outros computadores j\u00e1 podem juntar-se a esta pasta
-wizard.syncpcspanel.select=Por favor selecione o diret\u00f3rio que dever\u00e1 ser espelhado
-wizard.webservice.enteraccount=Por favor entre sua identifica\u00e7\u00e3o para conectar-se ao Armazenamento Online
-wizard.webservice.learnmore=O que \u00e9 o Armazenamento Online do PowerFolder?
+wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
+wizard.setup_dns.enter_dns=Digite seu dns (din\u00e2mico)
+wizard.setup_dns.improves_read=Isto melhora sua acessibilidade por\u00e9m n\u00e3o \u00e9 obrigat\u00f3rio
+wizard.setup_dns.no_dns_setup=Voc\u00ea ainda n\u00e3o configurou um ender\u00ea\u00e7o dns (din\u00e2mico)\!
+wizard.setup_dns.title=Configurar dns (din\u00e2mico)
+wizard.setup_dns.validate=Validar
+wizard.setup_success=Configura\u00e7\u00e3o bem sucedida
+wizard.success_join=Voc\u00ea juntou-se a pasta com sucesso\!
+wizard.sync_pcs_panel.folder_sync_success=Voc\u00ea configurou uma pasta espelhada com sucesso\!\n
+wizard.sync_pcs_panel.pcs_join=Outros computadores j\u00e1 podem juntar-se a esta pasta
+wizard.sync_pcs_panel.select=Por favor selecione o diret\u00f3rio que dever\u00e1 ser espelhado
+wizard.webservice.enter_account=Por favor entre sua identifica\u00e7\u00e3o para conectar-se ao Armazenamento Online
+wizard.webservice.learn_more=O que \u00e9 o Armazenamento Online do PowerFolder?
 wizard.webservice.login=Conectar-se ao Armazenamento Online
-wizard.webservice.mirrorchoosefolder=Escolha uma pasta a ser salva no Armazenamento Online do PowerFolder
-wizard.webservice.mirrorsetup=Fazer backup usando Armazenamento Online
+wizard.webservice.mirror_choose_folder=Escolha uma pasta a ser salva no Armazenamento Online do PowerFolder
+wizard.webservice.mirror_setup=Fazer backup usando Armazenamento Online
 wizard.webservice.password=Senha
 wizard.webservice.register=Registrar Nova Conta
 wizard.webservice.username=Email
-wizard.whattodo.backup_folder=Fazer backup de uma pasta
-wizard.whattodo.custom_sync=Compartilhar uma pasta (personalizada)
-wizard.whattodo.hostwork=Hospedar uma pasta
-wizard.whattodo.load_invite=Abrir arquivo de convite
-wizard.whattodo.mirror_folder=Espelhar uma pasta
-wizard.whattodo.openonlinedocumentation=Abrir documenta\u00e7\u00e3o online
-wizard.whattodo.projectwork=Sincronizar um projeto
-wizard.whattodo.title=O que voc\u00ea quer fazer?
+wizard.what_to_do.backup_folder=Fazer backup de uma pasta
+wizard.what_to_do.custom_sync=Compartilhar uma pasta (personalizada)
+wizard.what_to_do.host_work=Hospedar uma pasta
+wizard.what_to_do.load_invite=Abrir arquivo de convite
+wizard.what_to_do.mirror_folder=Espelhar uma pasta
+wizard.what_to_do.open_online_documentation=Abrir documenta\u00e7\u00e3o online
+wizard.what_to_do.project_work=Sincronizar um projeto
+wizard.what_to_do.title=O que voc\u00ea quer fazer?
