--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1027,17 +1027,17 @@ remove_from_recycle_bin_confimation.title=Tag bort filer?
 ##remove_previews_action.text=Do you want to remove all preview folders?
 ##remove_previews_action.title=Remove all preview folders
 
-removefriend.description=Tar bort anv\u00e4ndare fr\u00e5n v\u00e4nlistan
-removefriend.key=t
-removefriend.name=Tag bort fr\u00e5n v\u00e4nner
+remove_friend.description=Tar bort anv\u00e4ndare fr\u00e5n v\u00e4nlistan
+remove_friend.key=t
+remove_friend.name=Tag bort fr\u00e5n v\u00e4nner
 
-removemodifierfriend.description=Tar bort den som \u00e4ndrat filen fr\u00e5n v\u00e4nlistan
-removemodifierfriend.key=t
-removemodifierfriend.name=Tag bort \u00e4ndrare fr\u00e5n v\u00e4nlistan
+remove_modifier_friend.description=Tar bort den som \u00e4ndrat filen fr\u00e5n v\u00e4nlistan
+remove_modifier_friend.key=t
+remove_modifier_friend.name=Tag bort \u00e4ndrare fr\u00e5n v\u00e4nlistan
 
-requestfilelist.description=Uppdaterar fillistan f\u00f6r denna foldern fr\u00e5n andra medlemmar av foldern
-requestfilelist.key=U
-requestfilelist.name=Fr\u00e5ga efter uppdaterad fillista
+request_file_list.description=Uppdaterar fillistan f\u00f6r denna foldern fr\u00e5n andra medlemmar av foldern
+request_file_list.key=U
+request_file_list.name=Fr\u00e5ga efter uppdaterad fillista
 
 requestnetfolderlist.description=Uppdaterar listan med offentliga foldrar
 requestnetfolderlist.key=u
@@ -1046,20 +1046,20 @@ requestnetfolderlist.name=Uppdatera listan
 restore.busy.description=Flyttar filer fr\u00e5n PowerFolders pappperskorg till din folder
 restore.busy.title=\u00c5terskapar fil(er)
 
-restorefile.description=\u00c5terskapa fil
-restorefile.key=\u00e5
-restorefile.name=\u00c5terskapa fil
+restore_file.description=\u00c5terskapa fil
+restore_file.key=\u00e5
+restore_file.name=\u00c5terskapa fil
 
-rootpanel.connected_users=Anslutna anv\u00e4ndare
-rootpanel.friends=V\u00e4nner
+root_panel.connected_users=Anslutna anv\u00e4ndare
+root_panel.friends=V\u00e4nner
 
-##scanallfolders.description=Synchronizes all folders now (F5)
-scanallfolders.key=a
-scanallfolders.name=Synkronisera nu
+##scan_all_folders.description=Synchronizes all folders now (F5)
+scan_all_folders.key=a
+scan_all_folders.name=Synkronisera nu
 
-##scanfolder.description=Checks folder for file changes now (Alt-1)
-scanfolder.key=s
-scanfolder.name=Synkronisera
+##scan_folder.description=Checks folder for file changes now (Alt-1)
+scan_folder.key=s
+scan_folder.name=Synkronisera
 
 ##select_invitation.folder_text=Select folder to send invitation for
 ##select_invitation.message_text=Enter a message for the receiver
@@ -1071,27 +1071,27 @@ send_invitation.example_email_address=e-post@dom\u00e4n.se
 ##send_invitation.no_users=No users selected
 ##send_invitation.select_user.text=Select user
 
-##sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
-##sendinvitation.allFolders.title={0} already on all folders
-sendinvitation.ask_emailaddres.message=E-post-adress att s\u00e4nda inbjudan till
-sendinvitation.ask_emailaddres.title=E-post adress
-sendinvitation.body=Hej {0},<br><br>{1} inbjuder dig till PowerFolder '{2}'<br>Denna inbjudan anv\u00e4nds f\u00f6r att komma \u00e5t en privat folder hos {1}.<br><br>1) f\u00f6r att komma \u00e5t filerna beh\u00f6ver du f\u00f6rst ladda ner och installera det fria<br>programmet PowerFolder fr\u00e5n<br>http\://www.powerfolder.com.<br><br>2) Sedan du har installerat PowerFolder dubbel-klicka p\u00e5 inbjudningsfilen<br>som \u00e4r bifogad denna e-post.<br><br>F\u00f6r mer information eller hj\u00e4lp med att installera eller att anv\u00e4nda PowerFolder<br>var v\u00e4nlig g\u00e5 till v\u00e5r dokumentation p\u00e5 http\://docs.powerfolder.com<br><br>H\u00e4lsningar,<br>PowerFolder utvecklingsteam<br>PowerFolder, professionell fildelning<br>
-sendinvitation.description=Inbjuder en anv\u00e4ndare till en folder
-sendinvitation.email=Till e-post...
-sendinvitation.folder.text=Skicka inbjudan till
-sendinvitation.folder.title=Skicka inbjudan
-sendinvitation.key=i
-sendinvitation.name=Skicka inbjudan
-sendinvitation.placetostore=V\u00e4lj plats f\u00f6r att spara inbjudan
-sendinvitation.subject=Inbjudan till PowerFolder '{0}'
-sendinvitation.toclipboard=Till klippbordet...
-sendinvitation.todisk=Till disk...
+##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
+##send_invitation.allFolders.title={0} already on all folders
+send_invitation.ask_emailaddres.message=E-post-adress att s\u00e4nda inbjudan till
+send_invitation.ask_emailaddres.title=E-post adress
+send_invitation.body=Hej {0},<br><br>{1} inbjuder dig till PowerFolder '{2}'<br>Denna inbjudan anv\u00e4nds f\u00f6r att komma \u00e5t en privat folder hos {1}.<br><br>1) f\u00f6r att komma \u00e5t filerna beh\u00f6ver du f\u00f6rst ladda ner och installera det fria<br>programmet PowerFolder fr\u00e5n<br>http\://www.powerfolder.com.<br><br>2) Sedan du har installerat PowerFolder dubbel-klicka p\u00e5 inbjudningsfilen<br>som \u00e4r bifogad denna e-post.<br><br>F\u00f6r mer information eller hj\u00e4lp med att installera eller att anv\u00e4nda PowerFolder<br>var v\u00e4nlig g\u00e5 till v\u00e5r dokumentation p\u00e5 http\://docs.powerfolder.com<br><br>H\u00e4lsningar,<br>PowerFolder utvecklingsteam<br>PowerFolder, professionell fildelning<br>
+send_invitation.description=Inbjuder en anv\u00e4ndare till en folder
+send_invitation.email=Till e-post...
+send_invitation.folder.text=Skicka inbjudan till
+send_invitation.folder.title=Skicka inbjudan
+send_invitation.key=i
+send_invitation.name=Skicka inbjudan
+send_invitation.placetostore=V\u00e4lj plats f\u00f6r att spara inbjudan
+send_invitation.subject=Inbjudan till PowerFolder '{0}'
+send_invitation.toclipboard=Till klippbordet...
+send_invitation.todisk=Till disk...
 
-setmasternode.description=V\u00e4lj anv\u00e4ndare som skall vara administrat\u00f6r f\u00f6r v\u00e4nlistan. V\u00e4nlistan laddas fr\u00e5n administrat\u00f6ren
-setmasternode.dialog.text=V\u00e4lj administrat\u00f6r f\u00f6r din v\u00e4nlista
-setmasternode.dialog.title=V\u00e4nlistans administrat\u00f6r
-setmasternode.key=a
-setmasternode.name=V\u00e4lj Admin Anv\u00e4ndare
+set_master_node.description=V\u00e4lj anv\u00e4ndare som skall vara administrat\u00f6r f\u00f6r v\u00e4nlistan. V\u00e4nlistan laddas fr\u00e5n administrat\u00f6ren
+set_master_node.dialog.text=V\u00e4lj administrat\u00f6r f\u00f6r din v\u00e4nlista
+set_master_node.dialog.title=V\u00e4nlistans administrat\u00f6r
+set_master_node.key=a
+set_master_node.name=V\u00e4lj Admin Anv\u00e4ndare
 
 ##setup.description=Sets up new or joins existing PowerFolders
 ##setup.key=s
@@ -1101,32 +1101,32 @@ setmasternode.name=V\u00e4lj Admin Anv\u00e4ndare
 ##show_preview.key=S
 ##show_preview.name=Show Preview Folders
 
-showfileinfo.description=Visar detaljerade egenskaper f\u00f6r den valda filen
-showfileinfo.key=e
-showfileinfo.name=Egenskaper f\u00f6r fil
+show_file_info.description=Visar detaljerade egenskaper f\u00f6r den valda filen
+show_file_info.key=e
+show_file_info.name=Egenskaper f\u00f6r fil
 
-##showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
-showhidefiledetails.key=d
-showhidefiledetails.name=Detaljer
+##show_hide_file_details.description=Shows/Hides detailed information about the selected file (Alt-4)
+show_hide_file_details.key=d
+show_hide_file_details.name=Detaljer
 
 splash.version=Version {0}
 
 ##start.file.unable.text=Unable to start\n{0}
 ##start.file.unable.title=Unable to start
 
-startdownloads.description=\u00d6ppnar de valda, nedladdade filerna
-startdownloads.key=s
-startdownloads.name=\u00d6ppna
+start_downloads.description=\u00d6ppnar de valda, nedladdade filerna
+start_downloads.key=s
+start_downloads.name=\u00d6ppna
 
 status.download=Ner\: %.2f KB/s
 status.port=Port\: {0}
 status.upload=Upp\: %.2f KB/s
 
-##statusbar.status_change.connected=PowerFolder is connected
-##statusbar.status_change.disabled=PowerFolder is disabled
-##statusbar.status_change.disconnected=PowerFolder is disconnected
-##statusbar.status_change.title=Connection Status
-statusbar.synchronizing=Synkroniserar...
+##status_bar.status_change.connected=PowerFolder is connected
+##status_bar.status_change.disabled=PowerFolder is disabled
+##status_bar.status_change.disconnected=PowerFolder is disconnected
+##status_bar.status_change.title=Connection Status
+status_bar.synchronizing=Synkroniserar...
 
 ##sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview.
 ##sync_folder_rights.key=S
@@ -1138,31 +1138,31 @@ synchronisation.warning.automatic_deletions_notice=Denna mod synkroniserar \u00e
 synchronisation.warning.explanation=Du har valt synkroniseringsprofil '{0}' f\u00f6r foldern {1}.
 synchronisation.warning.title=Aktivera synkroniseringsprofil {0} f\u00f6r {1}
 
-##syncprofile.autodownload_friends.name=Auto-download friends
-##syncprofile.automatic_download.name=Automatic download
-##syncprofile.automatic_synchronization.name=Automatic synchronization
-##syncprofile.backup_source.name=Backup (source)
-##syncprofile.backup_target.name=Backup (target)
-syncprofile.custom.name=Anpassad...
-##syncprofile.disabled.name=Disabled
-##syncprofile.host_files.name=Host files
-##syncprofile.manual_synchronization.name=Manual synchronization
-##syncprofile.no_sync.name=No synchronization
+##transfer_mode.auto_download_friends.name=Auto-download friends
+##transfer_mode.automatic_download.name=Automatic download
+##transfer_mode.automatic_synchronization.name=Automatic synchronization
+##transfer_mode.backup_source.name=Backup (source)
+##transfer_mode.backup_target.name=Backup (target)
+transfer_mode.custom.name=Anpassad...
+##transfer_mode.disabled.name=Disabled
+##transfer_mode.host_files.name=Host files
+##transfer_mode.manual_synchronization.name=Manual synchronization
+##transfer_mode.no_sync.name=No synchronization
 
-##systemservice.options.info1=Use these options install/uninstall
-##systemservice.options.info2=PowerFolder as system service.
-##systemservice.options.install=Install
-##systemservice.options.title=PowerFolder System Service
-##systemservice.options.uninstall=Uninstall
+##system_service.options.info1=Use these options install/uninstall
+##system_service.options.info2=PowerFolder as system service.
+##system_service.options.install=Install
+##system_service.options.title=PowerFolder System Service
+##system_service.options.uninstall=Uninstall
 
 systray.exit=Avsluta
 systray.hide=G\u00f6m
 systray.powerfolder=PowerFolder v{0}
 systray.show=Visa
-systray.syncall=Synkronisera foldrar
+systray.sync_all=Synkronisera foldrar
 systray.tooltip.down=Ner {0} KBs
 systray.tooltip.down.mb=Ner {0} MBs
-systray.tooltip.insync=Synkroniserat
+systray.tooltip.in_sync=Synkroniserat
 systray.tooltip.syncing=Synkroniserar
 systray.tooltip.up=Upp {0} KBs
 systray.tooltip.up.mb=Upp {0} MBs
@@ -1201,7 +1201,7 @@ transfers.local=lokal
 transfers.pending=V\u00e4ntar
 transfers.progress=F\u00f6rlopp
 transfers.queued=i k\u00f6
-##transfers.remotehashing=Preparing
+##transfers.remote_hashing=Preparing
 transfers.requested=beg\u00e4rd
 transfers.searching=S\u00f6ker...
 transfers.to=Till
@@ -1241,21 +1241,21 @@ transfers.to=Till
 ##winutils.shortcut.description=This shortcut was placed here by PowerFolder                                                                                    
 
 ##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
-##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.pcs_join=Other computers can join this folder now
 ##wizard.backup_panel.select=Please select the directory which should be backed up
-##wizard.basicsetup.computer_name=Name of this computer
-##wizard.basicsetup.default_folder_name=Synchronized Files
-wizard.basicsetup.lanonly=endast LAN
-wizard.basicsetup.networking=Anslut till
-wizard.basicsetup.private=LAN och Internet
-wizard.basicsetup.title=Grundl\u00e4ggande inst\u00e4llningar
-##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
-##wizard.basicsetup.upload.title=Unlimited connection speed
+##wizard.basic_setup.computer_name=Name of this computer
+##wizard.basic_setup.default_folder_name=Synchronized Files
+wizard.basic_setup.lan_only=endast LAN
+wizard.basic_setup.networking=Anslut till
+wizard.basic_setup.private=LAN och Internet
+wizard.basic_setup.title=Grundl\u00e4ggande inst\u00e4llningar
+##wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+##wizard.basic_setup.upload.title=Unlimited connection speed
 ##wizard.choose_location.select=Please select the directory
-##wizard.choosedisklocation.calculating_directory_size=Calculating size of directory...
-##wizard.choosedisklocation.directory_size=Directory size {0}
-wizard.choosedisklocation.select=V\u00e4lj mapp
-wizard.choosedisklocation.title=Plats p\u00e5 disk
+##wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
+##wizard.choose_disk_location.directory_size=Directory size {0}
+wizard.choose_disk_location.select=V\u00e4lj mapp
+wizard.choose_disk_location.title=Plats p\u00e5 disk
 wizard.control.back=< Tillbaka
 ##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Avbryt
@@ -1269,25 +1269,25 @@ wizard.control.next=N\u00e4sta >
 ##wizard.create_folder.failed=Failed to create PowerFolder.
 ##wizard.create_folder.title=Creating PowerFolder
 ##wizard.create_folder.working=Creating PowerFolder, please wait.
-wizard.filesharing.sharedsuccess=Du lyckades dela en ny folder\!\nAndtra anv\u00e4ndare kan g\u00e5 med nu
+wizard.file_sharing.shared_success=Du lyckades dela en ny folder\!\nAndtra anv\u00e4ndare kan g\u00e5 med nu
 ##wizard.folder_invitation.intro=You have received an invitation from {0}
 ##wizard.folder_invitation.title=Folder Invitation
 ##wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
-##wizard.host_panel.pcsjoin=Other computers can join this folder now
+##wizard.host_panel.pcs_join=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
-##wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.load_invitation.addtofriends=L\u00e4gg till {0} till v\u00e4nner
-wizard.load_invitation.choosefile=Val av inbjudningsfil
+##wizard.invite.select_local_directory=Please select local target directory for the files
+wizard.load_invitation.add_to_friends=L\u00e4gg till {0} till v\u00e4nner
+wizard.load_invitation.choose_file=Val av inbjudningsfil
 wizard.load_invitation.select=V\u00e4lj inbjudningsfil
-wizard.load_invitation.selectfile=Var v\u00e4nlig v\u00e4lj inbjudningsfil
+wizard.load_invitation.select_file=Var v\u00e4nlig v\u00e4lj inbjudningsfil
 wizard.load_invitation.title=Ladda inbjudan
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Assistenten
 ##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 ##wizard.project_panel.select=Please select the project directory
-wizard.projectname.choose=V\u00e4lj projekt namn
-wizard.projectname.entername=Mata in namnet p\u00e5 ditt projekt
-wizard.projectname.title=Ladda inbjudan
+wizard.project_name.choose=V\u00e4lj projekt namn
+wizard.project_name.enter_name=Mata in namnet p\u00e5 ditt projekt
+wizard.project_name.title=Ladda inbjudan
 ##wizard.send_invitations.invitation_text=Enter a message for the receiver
 ##wizard.send_invitations.invitation_text_sample=
 ##wizard.send_invitations.join=Invitation files are required to join a folder.
@@ -1297,36 +1297,36 @@ wizard.send_invitations.save_to_file=Spara som en fil
 wizard.send_invitations.send_by_mail=Skicka med e-post
 wizard.send_invitations.send_invitation=Skicka inbjudan
 wizard.send_invitations.title=Spara inbjudan
-wizard.sendinvitations.offline=Ej ansluten
-wizard.sendinvitations.sendsuccess=Inbjudan skickad
-wizard.sendinvitations.sendsuccessinfo=Du lyckades s\u00e4nda iv\u00e4g inbjudan.
-##wizard.setup_folder.sendinvitation=Send invitations afterwards
+wizard.send_invitations.offline=Ej ansluten
+wizard.send_invitations.send_success=Inbjudan skickad
+wizard.send_invitations.send_success_info=Du lyckades s\u00e4nda iv\u00e4g inbjudan.
+##wizard.setup_folder.send_invitation=Send invitations afterwards
 ##wizard.setup_folder.title=Create Folder
 ##wizard.setup_folder.transfer_mode=Transfer mode
-wizard.setupdns.dyndnshomepage=DynDNS hemsida
-wizard.setupdns.enterdns=Ange din (dynamiska) DNS
-wizard.setupdns.improvesread=Det g\u00f6r det l\u00e4ttare att n\u00e5 dig. Men det \u00e4r inget som kr\u00e4vs
-wizard.setupdns.nodnssetup=Du har inte satt upp n\u00e5gon (dynamisk) DNS adress \u00e4nnu\!
-wizard.setupdns.title=S\u00e4tt upp (dynamisk) DNS
-##wizard.setupdns.validate=Validate
-wizard.setupsuccess=Inst\u00e4llningarna lyckades
-##wizard.successjoin=You have successfully joined the folder\!
+wizard.setup_dns.dyn_dns_home_page=DynDNS hemsida
+wizard.setup_dns.enter_dns=Ange din (dynamiska) DNS
+wizard.setup_dns.improves_read=Det g\u00f6r det l\u00e4ttare att n\u00e5 dig. Men det \u00e4r inget som kr\u00e4vs
+wizard.setup_dns.no_dns_setup=Du har inte satt upp n\u00e5gon (dynamisk) DNS adress \u00e4nnu\!
+wizard.setup_dns.title=S\u00e4tt upp (dynamisk) DNS
+##wizard.setup_dns.validate=Validate
+wizard.setup_success=Inst\u00e4llningarna lyckades
+##wizard.success_join=You have successfully joined the folder\!
 ##wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
-##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
-wizard.syncpcspanel.pcsjoin=Andra datorer kan g\u00e5 med i denna folder nu
-##wizard.webservice.enteraccount=Please enter your account details to login to Online Storage
-##wizard.webservice.learnmore=What is PowerFolder Online Storage?
+##wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
+wizard.sync_pcs_panel.pcs_join=Andra datorer kan g\u00e5 med i denna folder nu
+##wizard.webservice.enter_account=Please enter your account details to login to Online Storage
+##wizard.webservice.learn_more=What is PowerFolder Online Storage?
 ##wizard.webservice.login=Online Storage Login
-##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by PowerFolder Online Storage
-##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
+##wizard.webservice.mirror_choose_folder=Choose a folder to be backed up by PowerFolder Online Storage
+##wizard.webservice.mirror_setup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
 ##wizard.webservice.register=Register New Account
 ##wizard.webservice.username=Email
-##wizard.whattodo.backup_folder=Backup a folder
-##wizard.whattodo.custom_sync=Share a folder (customized)
-##wizard.whattodo.hostwork=Host a folder
-##wizard.whattodo.load_invite=Open invitation file
-wizard.whattodo.openonlinedocumentation=\u00d6ppna online dokumentation
-wizard.whattodo.projectwork=Synkronisera projekt
-##wizard.whattodo.synchronized_folder=Setup a synchronized folder
-wizard.whattodo.title=Vad vill du g\u00f6ra ?
+##wizard.what_to_do.backup_folder=Backup a folder
+##wizard.what_to_do.custom_sync=Share a folder (customized)
+##wizard.what_to_do.host_work=Host a folder
+##wizard.what_to_do.load_invite=Open invitation file
+wizard.what_to_do.open_online_documentation=\u00d6ppna online dokumentation
+wizard.what_to_do.project_work=Synkronisera projekt
+##wizard.what_to_do.synchronized_folder=Setup a synchronized folder
+wizard.what_to_do.title=Vad vill du g\u00f6ra ?
